chore: Update Translations (#1346)
[skip ci]

--- a/strings/languages/el_GR/strings.json
+++ b/strings/languages/el_GR/strings.json
@@ -14,25 +14,35 @@
     "chapterInsertFailed": "chapter insert failed",
     "clearCachedNovels": "Clear cached novels",
     "clearCachedNovelsDesc": "Delete cached novels which not in your library",
-    "clearDatabaseWarning": "Are you sure? Read and Downloaded chapters and progress of non-library novels will be lost.",
+    "clearDatabaseWarning": "Read and Downloaded chapters and progress of non-library novels will be lost.",
     "clearUpdatesMessage": "Updates cleared.",
     "clearUpdatesTab": "Clear updates tab",
-    "clearUpdatesWarning": "Are you sure? Updates tab will be cleared.",
+    "clearUpdatesWarning": "Updates tab will be cleared.",
     "clearupdatesTabDesc": "Clears chapter entries in updates tab",
     "dataManagement": "Data Management",
     "deleteReadChapters": "Delete read chapters",
-    "deleteReadChaptersDialogTitle": "Are you sure? All chapters marked as read will be deleted.",
+    "deleteReadChaptersDialogTitle": "All chapters marked as read will be deleted.",
     "importEpub": "Import Epub",
     "importNovel": "Import Novel",
     "importStaticFiles": "Import Static Files",
     "novelInsertFailed": "novel insert failed",
     "useFAB": "Use FAB instead of button",
-    "userAgent": "User Agent"
+    "userAgent": "User Agent",
+    "recreateDBIndexes": "Recreate DB indexes",
+    "recreateDBIndexesToast": "Recreated DB indexes",
+    "recreateDBIndexesDialogTitle": "All DB indexes will be recreated.\nThis may take a while.",
+    "recreateDBIndexesDesc": "Recreates DB indexes. This may improve performance on slower devices."
   },
   "appearance": "Appearance",
   "appearanceScreen": {
     "accentColor": "Accent Color",
     "alwaysShowNavLabels": "Always show nav labels",
+    "appLanguage": "App language",
+    "languagePickerModal": {
+      "title": "Select Language",
+      "restartNote": "You will need to restart the app for the language change to take full effect."
+    },
+    "appLanguageDefault": "Default",
     "appTheme": "App theme",
     "darkTheme": "Dark Theme",
     "hideBackdrop": "Hide backdrop",
@@ -42,6 +52,10 @@
     "pureBlackDarkMode": "Pure black dark mode",
     "showHistoryInTheNav": "Show history in the nav",
     "showUpdatesInTheNav": "Show updates in the nav",
+    "themeMode": "Theme mode",
+    "themeModeLight": "Light",
+    "themeModeDark": "Dark",
+    "themeModeSystem": "System",
     "theme": {
       "default": "Default",
       "lavender": "Lavender",
@@ -51,16 +65,27 @@
       "tako": "Tako",
       "teal": "Teal",
       "turquoise": "Turquoise",
-      "yotsuba": "Yotsuba"
+      "yotsuba": "Yotsuba",
+      "catppuccin": "Catppuccin",
+      "yinyang": "Yin & Yang"
     }
   },
   "backupScreen": {
     "backupName": "Backup name",
+    "backupCreated": "Backup created successfully",
+    "backupRestored": "Backup restored successfully",
+    "categoriesRestored": "Restored %{count} categories",
     "createBackup": "Create backup",
     "createBackupDesc": "Can be used to restore current library",
     "createBackupWarning": "Create backup may not work on devices with Android 9 or lower.",
     "downloadingData": "Downloading Data",
     "downloadingDownloadedFiles": "Downloading Downloaded files",
+    "failed": "Backup failed",
+    "novelsRestored": "Restored %{count} novels",
+    "restoringCategories": "Restoring categories...",
+    "restoringNovels": "Restoring novels...",
+    "restoringSettings": "Restoring settings...",
+    "settingsRestored": "Settings restored",
     "drive": {
       "backup": "Drive Backup",
       "backupInterruped": "Drive Backup Interruped",
@@ -71,13 +96,7 @@
     "googeDrive": "Googe Drive",
     "googeDriveDesc": "Backup to your Google Drive",
     "invalidBackupFolder": "Invalid backup folder",
-    "legacy": {
-      "backupCreated": "Backup created %{fileName}",
-      "libraryRestored": "Library Restored",
-      "noAvailableBackup": "There's no available backup",
-      "novelsRestored": "%{num} novels restored"
-    },
-    "legacyBackup": "Legacy Backup",
+    "localBackup": "Local Backup",
     "noBackupFound": "No backup found",
     "preparingData": "Preparing Data",
     "remote": {
@@ -100,6 +119,7 @@
   "browseScreen": {
     "addedToLibrary": "Προστέθηκε στη βιβλιοθήκη",
     "available": "Available",
+    "deletePluginMessage": "Are you sure you want to uninstall %{name}?",
     "discover": "Discover",
     "globalSearch": "Global search",
     "installFailed": "Installation failed: %{name}",
@@ -116,10 +136,14 @@
       "selectSourceDesc": "Select a Source To Migrate From"
     },
     "noSource": "Your library does not have any novels from this source",
+    "pinnedPlugin": "Pinned %{name}",
+    "pinnedPlugins": "Pinned plugins",
     "removeFromLibrary": "Καταργήθηκε από τη βιβλιοθήκη",
     "searchbar": "Αναζήτηση πηγών",
+    "searchResults": "Search results",
     "selectNovel": "Select Novel",
     "uninstalledPlugin": "Uninstalled %{name}",
+    "unpinnedPlugin": "Unpinned %{name}",
     "updateFailed": "Update failed",
     "updatedTo": "Updated to %{version}",
     "settings": {
@@ -194,7 +218,9 @@
     "signIn": "Sign in",
     "signOut": "Sign out",
     "sort": "Sort",
-    "submit": "Υποβολή"
+    "submit": "Υποβολή",
+    "loading": "Loading ...",
+    "warning": "Warning"
   },
   "webview": {
     "refresh": "Refresh",
@@ -343,15 +369,28 @@
     "chapterChapnum": "Chapter %{num}",
     "chapters": "chapters",
     "continueReading": "Continue reading",
-    "convertToEpubModal": {
-      "chaptersWarning": "Only downloaded chapters are included in the EPUB",
-      "chooseLocation": "Select EPUB storage directory",
-      "pathToFolder": "Path to EPUB save folder",
-      "useCustomCSS": "Use custom CSS",
-      "useCustomJS": "Use custom JS",
-      "useCustomJSWarning": "May not be supported by all EPUB readers",
-      "useReaderTheme": "Use reader theme"
+    "exportEpubModal": {
+      "applyReaderTheme": "Apply reader theme to EPUB",
+      "customJSWarning": "Custom JS may not be supported by all EPUB readers",
+      "downloadedChaptersOnly": "Only downloaded chapters will be included in the EPUB file",
+      "endChapter": "End Chapter",
+      "exportAll": "Export All Chapters",
+      "includeCustomCSS": "Include Custom CSS",
+      "includeCustomJS": "Include Custom JS",
+      "invalidRange": "Please enter valid chapter numbers",
+      "selectFolder": "Select destination folder for EPUB file",
+      "startChapter": "Start Chapter",
+      "startGreaterThanEnd": "Start chapter must be less than or equal to end chapter",
+      "title": "Export Novel as EPUB"
     },
+    "epub": {
+      "exportFailed": "Failed to export EPUB: %{error}",
+      "exportSuccess": "Successfully exported %{chapters} chapters as EPUB",
+      "noDownloadedChapters": "No downloaded chapters found. Please download chapters before exporting.",
+      "noNovelSelected": "No novel selected for export"
+    },
+    "coverSaved": "Cover saved",
+    "coverNotSaved": "Cover not saved",
     "deleteChapterError": "Cant delete chapter chapter folder",
     "deleteMessage": "Delete downloaded chapters?",
     "deletedAllDownloads": "Deleted all Downloads",
@@ -386,6 +425,7 @@
     },
     "migrate": "Migrate",
     "noSummary": "No summary",
+    "noCoverFound": "No cover found",
     "progress": "Progress %{progress} %",
     "readChaptersDeleted": "Read chapters deleted",
     "startReadingChapters": "Start reading %{name}",
@@ -405,27 +445,27 @@
   },
   "readerScreen": {
     "bottomSheet": {
-      "allowTextSelection": "Allow text selection",
-      "autoscroll": "Αυτόματη Κύλιση",
-      "bionicReading": "Bionic Reading",
+      "allowTextSelection": "Text selection",
+      "autoscroll": "Auto-scroll",
+      "bionicReading": "Bionic reading",
       "tapToScroll": "Tap to scroll",
       "color": "Χρώμα",
       "fontStyle": "Στυλ γραμματοσειράς",
       "fullscreen": "Πλήρης Οθόνη",
-      "lineHeight": "Ύψος Γραμμής",
+      "lineHeight": "Line height",
       "padding": "Padding",
-      "pageReader": "Tap left or right to navigate through pages in the reader (Experimental)",
-      "removeExtraSpacing": "Αφαίρεση επιπλέον απόστασης παραγράφων",
+      "pageReader": "Paged reading (Experimental)",
+      "removeExtraSpacing": "Remove extra spacing",
       "scrollAmount": "Scroll amount (screen height by default)",
-      "showBatteryAndTime": "Εμφάνιση μπαταρίας και ώρας",
-      "showProgressPercentage": "Εμφάνιση ποσοστού προόδου",
-      "swipeGestures": "Σύρετε αριστερά ή δεξιά για περιήγηση μεταξύ κεφαλαίων",
-      "textAlign": "Ευθυγράμμιση κειμένου",
+      "showBatteryAndTime": "Battery & time",
+      "showProgressPercentage": "Reading progress",
+      "swipeGestures": "Swipe between chapters",
+      "textAlign": "Text alignment",
       "textSize": "Μέγεθος κειμένου",
-      "useChapterDrawerSwipeNavigation": "Swipe right to open drawer",
-      "verticalSeekbar": "Vertical Seekbar",
+      "useChapterDrawerSwipeNavigation": "Swipe to open drawer",
+      "verticalSeekbar": "Vertical seekbar",
       "keepScreenOn": "Keep screen on",
-      "volumeButtonsScroll": "Volume buttons scroll"
+      "volumeButtonsScroll": "Volume button scrolling"
     },
     "drawer": {
       "scrollToBottom": "Κύλιση προς τα κάτω",
@@ -439,27 +479,29 @@
     "noPreviousChapter": "There's no previous chapter"
   },
   "readerSettings": {
-    "autoScrollInterval": "Auto scroll interval (in seconds)",
-    "autoScrollOffset": "Auto scroll offset (screen height by default)",
+    "autoScrollInterval": "Scroll interval (seconds)",
+    "autoScrollOffset": "Scroll offset (screen heights)",
     "backgroundColor": "Background color",
-    "backgroundColorModal": "Reader background color",
-    "clearCustomCSS": "Are you sure? Your custom CSS would be reset.",
-    "clearCustomJS": "Are you sure? Your custom JS would be reset.",
-    "cssHint": "Hint: You can create source specific CSS configuration with the source ID. (#sourceId-[SOURCEID])",
+    "backgroundColorModal": "Background color",
+    "clearCustomCSS": "Reset your custom CSS?",
+    "clearCustomJS": "Reset your custom JS?",
+    "cssHint": "Target specific sources using #sourceId-[SOURCEID] in your selectors",
     "customCSS": "Custom CSS",
     "customJS": "Custom JS",
-    "deleteCustomTheme": "Delete custom theme",
-    "jsHint": "Hint: You have access to following variables: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "deleteCustomTheme": "Delete theme",
+    "jsHint": "Available variables: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "navigationControls": "Navigation Controls",
     "notSaved": "Not saved",
-    "openCSSFile": "Open CSS file",
-    "openJSFile": "Open JS file",
+    "openCSSFile": "Import CSS file",
+    "openJSFile": "Import JS file",
     "preset": "Preset",
-    "readerTheme": "Reader theme",
-    "saveCustomTheme": "Save custom theme",
+    "readingMode": "Reading Mode",
+    "readerTheme": "Theme",
+    "saveCustomTheme": "Save theme",
     "textColor": "Text color",
-    "textColorModal": "Reader text color",
+    "textColorModal": "Text color",
     "title": "Reader",
-    "verticalSeekbarDesc": "Switch between vertical and horizontal seekbar"
+    "verticalSeekbarDesc": "Use vertical seekbar"
   },
   "sourceScreen": {
     "noResultsFound": "No results found"
@@ -499,6 +541,17 @@
     "pickATheme": "Pick a theme",
     "light": "Light",
     "dark": "Dark",
+    "system": "System",
     "complete": "Complete"
+  },
+  "notifications": {
+    "IMPORT_EPUB": "Imported epub",
+    "UPDATE_LIBRARY": "Updated library",
+    "DRIVE_BACKUP": "Drive backup",
+    "DRIVE_RESTORE": "Drive restore",
+    "SELF_HOST_BACKUP": "Self host backup",
+    "SELF_HOST_RESTORE": "Self host restore",
+    "MIGRATE_NOVEL": "Migrated novel",
+    "DOWNLOAD_CHAPTER": "Downloaded chapter"
   }
 }
