--- a/strings/languages/id_ID/strings.json
+++ b/strings/languages/id_ID/strings.json
@@ -1,109 +1,129 @@
 {
   "aboutScreen": {
-    "website": "Website",
-    "discord": "Discord",
-    "github": "Github",
-    "helpTranslate": "Help translate",
-    "sources": "Sources",
-    "version": "Version",
-    "whatsNew": "What's new"
+    "website": "indonesia",
+    "discord": "\nindonesia",
+    "github": "Indonesia",
+    "helpTranslate": "INDONESIA",
+    "sources": "Indonesi",
+    "version": "",
+    "whatsNew": ""
   },
-  "advancedSettings": "Advanced",
+  "advancedSettings": "",
   "advancedSettingsScreen": {
-    "cachedNovelsDeletedToast": "Cached novels deleted",
-    "chapterInsertFailed": "chapter insert failed",
-    "clearCachedNovels": "Clear cached novels",
-    "clearCachedNovelsDesc": "Delete cached novels which not in your library",
-    "clearDatabaseWarning": "Are you sure? Read and Downloaded chapters and progress of non-library novels will be lost.",
+    "cachedNovelsDeletedToast": "",
+    "chapterInsertFailed": "indonesian\n",
+    "clearCachedNovels": "",
+    "clearCachedNovelsDesc": "bahasa Indonesia",
+    "clearDatabaseWarning": ".",
     "clearUpdatesMessage": "Updates cleared.",
     "clearUpdatesTab": "Clear updates tab",
-    "clearUpdatesWarning": "Are you sure? Updates tab will be cleared.",
-    "clearupdatesTabDesc": "Clears chapter entries in updates tab",
-    "dataManagement": "Data Management",
+    "clearUpdatesWarning": ".",
+    "clearupdatesTabDesc": "",
+    "dataManagement": "",
     "deleteReadChapters": "Hapus bab yang telah dibaca\n",
-    "deleteReadChaptersDialogTitle": "Apakah kamu yakin? Semua bab ditandai sebagai sudah dibaca akan dihapus.",
-    "importEpub": "Import Epub",
-    "importNovel": "Import Novel",
-    "importStaticFiles": "Import Static Files",
-    "novelInsertFailed": "novel insert failed",
-    "useFAB": "Use FAB instead of button",
-    "userAgent": "User Agent"
+    "deleteReadChaptersDialogTitle": "Indonesia ",
+    "importEpub": "",
+    "importNovel": "",
+    "importStaticFiles": "",
+    "novelInsertFailed": "",
+    "useFAB": "",
+    "userAgent": "",
+    "recreateDBIndexes": "Recreate DB indexes",
+    "recreateDBIndexesToast": "",
+    "recreateDBIndexesDialogTitle": ".",
+    "recreateDBIndexesDesc": "Recreates DB indexes. This may improve performance on slower devices."
   },
-  "appearance": "Appearance",
+  "appearance": "",
   "appearanceScreen": {
-    "accentColor": "Accent Color",
-    "alwaysShowNavLabels": "Always show nav labels",
-    "appTheme": "App theme",
-    "darkTheme": "Dark Theme",
-    "hideBackdrop": "Hide backdrop",
-    "lightTheme": "Light Theme",
-    "navbar": "Navbar",
-    "novelInfo": "Novel info",
-    "pureBlackDarkMode": "Pure black dark mode",
-    "showHistoryInTheNav": "Show history in the nav",
-    "showUpdatesInTheNav": "Show updates in the nav",
+    "accentColor": "Save anyway",
+    "alwaysShowNavLabels": "",
+    "appLanguage": "App language",
+    "languagePickerModal": {
+      "title": "Select Language",
+      "restartNote": "You will need to restart the app for the language change to take full effect."
+    },
+    "appLanguageDefault": "Default",
+    "appTheme": "Indonesian\n",
+    "darkTheme": "",
+    "hideBackdrop": "",
+    "lightTheme": "",
+    "navbar": "",
+    "novelInfo": "",
+    "pureBlackDarkMode": "",
+    "showHistoryInTheNav": "",
+    "showUpdatesInTheNav": "",
+    "themeMode": "Theme mode",
+    "themeModeLight": "",
+    "themeModeDark": "",
+    "themeModeSystem": "Jawa",
     "theme": {
-      "default": "Default",
-      "lavender": "Lavender",
-      "midnightDusk": "Midnight Dusk",
-      "daybreakBloom": "Daybreak Bloom",
-      "strawberry": "Strawberry Daiquiri",
-      "tako": "Tako",
-      "teal": "Teal",
-      "turquoise": "Turquoise",
-      "yotsuba": "Yotsuba"
+      "default": "",
+      "lavender": "",
+      "midnightDusk": "",
+      "daybreakBloom": "",
+      "strawberry": "",
+      "tako": "",
+      "teal": "",
+      "turquoise": "",
+      "yotsuba": "",
+      "catppuccin": "Catppuccin",
+      "yinyang": ""
     }
   },
   "backupScreen": {
-    "backupName": "Backup name",
-    "createBackup": "Create backup",
-    "createBackupDesc": "Can be used to restore current library",
-    "createBackupWarning": "Create backup may not work on devices with Android 9 or lower.",
-    "downloadingData": "Downloading Data",
-    "downloadingDownloadedFiles": "Downloading Downloaded files",
+    "backupName": "",
+    "backupCreated": "",
+    "backupRestored": "",
+    "categoriesRestored": "Restored %{count} categories",
+    "createBackup": "",
+    "createBackupDesc": "",
+    "createBackupWarning": "",
+    "downloadingData": "",
+    "downloadingDownloadedFiles": "",
+    "failed": "",
+    "novelsRestored": "Restored %{count} novels",
+    "restoringCategories": "Restoring categories...",
+    "restoringNovels": "Restoring novels...",
+    "restoringSettings": "Restoring settings...",
+    "settingsRestored": "Settings restored",
     "drive": {
-      "backup": "Drive Backup",
-      "backupInterruped": "Drive Backup Interruped",
-      "googleDriveBackup": "Google Drive Backup",
-      "restore": "Drive Restore",
-      "restoreInterruped": "Drive Restore Interruped"
+      "backup": "",
+      "backupInterruped": "",
+      "googleDriveBackup": "",
+      "restore": "",
+      "restoreInterruped": ""
     },
-    "googeDrive": "Googe Drive",
-    "googeDriveDesc": "Backup to your Google Drive",
-    "invalidBackupFolder": "Invalid backup folder",
-    "legacy": {
-      "backupCreated": "Backup created %{fileName}",
-      "libraryRestored": "Library Restored",
-      "noAvailableBackup": "There's no available backup",
-      "novelsRestored": "%{num} novels restored"
-    },
-    "legacyBackup": "Legacy Backup",
-    "noBackupFound": "No backup found",
-    "preparingData": "Preparing Data",
+    "googeDrive": "",
+    "googeDriveDesc": "",
+    "invalidBackupFolder": "",
+    "localBackup": "Local Backup",
+    "noBackupFound": "",
+    "preparingData": "",
     "remote": {
-      "backup": "Self Host Backup",
-      "host": "Host",
-      "unknownHost": "Unknown host"
+      "backup": "",
+      "host": "",
+      "unknownHost": ""
     },
-    "remoteBackup": "Remote Backup",
-    "restoreBackup": "Restore backup",
-    "restoreBackupDesc": "Restore library from backup file",
-    "restoreLargeBackupsWarning": "Restoring large backups may freeze the app until restoring is finished",
-    "restorinBackup": "Restoring backup",
-    "restoringData": "Restoring Data",
-    "selfHost": "Self Host",
-    "selfHostDesc": "Backup to your server",
-    "uploadingData": "Uploading Data",
-    "uploadingDownloadedFiles": "Uploading Downloaded files"
+    "remoteBackup": "😹",
+    "restoreBackup": "",
+    "restoreBackupDesc": "",
+    "restoreLargeBackupsWarning": "",
+    "restorinBackup": "",
+    "restoringData": "",
+    "selfHost": "",
+    "selfHostDesc": "",
+    "uploadingData": "",
+    "uploadingDownloadedFiles": ""
   },
   "browse": "Telusur",
   "browseScreen": {
     "addedToLibrary": "Telah ditambahkan ke koleksi",
-    "available": "Available",
+    "available": "",
+    "deletePluginMessage": "Are you sure you want to uninstall %{name}?",
     "discover": "Jelajahi",
     "globalSearch": "Pencarian global\n",
-    "installFailed": "Installation failed: %{name}",
-    "installed": "Installed",
+    "installFailed": "Indonesia ",
+    "installed": "Indonesia",
     "installedPlugin": "Installed %{name}",
     "installedPlugins": "Installed plugins",
     "lastUsed": "Terakhir digunakan\n",
@@ -116,10 +136,14 @@
       "selectSourceDesc": "Select a Source To Migrate From"
     },
     "noSource": "Your library does not have any novels from this source",
+    "pinnedPlugin": "Pinned %{name}",
+    "pinnedPlugins": "Pinned plugins",
     "removeFromLibrary": "Dihapus dari koleksi\n",
     "searchbar": "Cari sumber\n",
+    "searchResults": "Search results",
     "selectNovel": "Select Novel",
     "uninstalledPlugin": "Uninstalled %{name}",
+    "unpinnedPlugin": "Unpinned %{name}",
     "updateFailed": "Update failed",
     "updatedTo": "Updated to %{version}",
     "settings": {
@@ -194,16 +218,18 @@
     "signIn": "Sign in",
     "signOut": "Sign out",
     "sort": "Menyortir\n",
-    "submit": "Megirim"
+    "submit": "Megirim",
+    "loading": "Loading ...",
+    "warning": "Warning"
   },
   "webview": {
     "refresh": "Refresh",
     "share": "Share",
     "openInBrowser": "Open in browser",
     "clearCookies": "Clear cookies",
-    "cookiesCleared": "Cookies cleared",
-    "clearData": "Clear WebView data",
-    "dataDeleted": "WebView data cleared"
+    "cookiesCleared": "",
+    "clearData": "",
+    "dataDeleted": "Indonesia"
   },
   "date": {
     "calendar": {
@@ -214,9 +240,9 @@
     }
   },
   "downloadScreen": {
-    "cancelDownloads": "Cancel downloads",
-    "cancelled": "Downloads cancelled.",
-    "chapterEmptyOrScrapeError": "Either chapter is empty or the app couldn't scrape it",
+    "cancelDownloads": "Indonesia",
+    "cancelled": "Indonesia",
+    "chapterEmptyOrScrapeError": "Indonesia",
     "chapterName": "Chapter: %{name}",
     "completed": "Download completed",
     "dbInfo": "Downloads are saved in a SQLite Database.",
@@ -309,7 +335,7 @@
     "empty": "Pustaka kamu kosong. Tambahkan serial ke pustaka kamu dari Jelajah.\n",
     "extraMenu": {
       "importEpub": "Import Epub",
-      "openRandom": "Open Random Entry",
+      "openRandom": "",
       "updateCategory": "Update Category",
       "updateLibrary": "Update Library"
     },
@@ -343,15 +369,28 @@
     "chapterChapnum": "Chapter %{num}",
     "chapters": "bab\n",
     "continueReading": "Lanjutkan membaca\n",
-    "convertToEpubModal": {
-      "chaptersWarning": "EPUB hanya berisi bab yang telah di unduh\n",
-      "chooseLocation": "Pilih tempat penyimpanan EPUB\n",
-      "pathToFolder": "Jalur ke berkas penyimpanan EPUB\n",
-      "useCustomCSS": "Gunakan CSS khusus\n",
-      "useCustomJS": "Gunakan JS khusus\n",
-      "useCustomJSWarning": "Bisa saja tidak didukung oleh semua pembaca EPUB\n",
-      "useReaderTheme": "Gunakan tema pembaca\n"
+    "exportEpubModal": {
+      "applyReaderTheme": "Apply reader theme to EPUB",
+      "customJSWarning": "Custom JS may not be supported by all EPUB readers",
+      "downloadedChaptersOnly": "Only downloaded chapters will be included in the EPUB file",
+      "endChapter": "End Chapter",
+      "exportAll": "Export All Chapters",
+      "includeCustomCSS": "Include Custom CSS",
+      "includeCustomJS": "Include Custom JS",
+      "invalidRange": "Please enter valid chapter numbers",
+      "selectFolder": "Select destination folder for EPUB file",
+      "startChapter": "Start Chapter",
+      "startGreaterThanEnd": "Start chapter must be less than or equal to end chapter",
+      "title": "Export Novel as EPUB"
     },
+    "epub": {
+      "exportFailed": "Failed to export EPUB: %{error}",
+      "exportSuccess": "Successfully exported %{chapters} chapters as EPUB",
+      "noDownloadedChapters": "No downloaded chapters found. Please download chapters before exporting.",
+      "noNovelSelected": "No novel selected for export"
+    },
+    "coverSaved": "Cover saved",
+    "coverNotSaved": "Cover not saved",
     "deleteChapterError": "Cant delete chapter chapter folder",
     "deleteMessage": "Delete downloaded chapters?",
     "deletedAllDownloads": "Deleted all Downloads",
@@ -371,7 +410,7 @@
       "info": "Edit info",
       "status": "Status:",
       "summary": "Description: %{summary}...",
-      "title": "Title: %{title}"
+      "title": ""
     },
     "inLibaray": "Di koleksi\n",
     "jumpToChapterModal": {
@@ -386,6 +425,7 @@
     },
     "migrate": "Pindah\n",
     "noSummary": "Tidak ada rangkuman\n",
+    "noCoverFound": "No cover found",
     "progress": "Progress %{progress} %",
     "readChaptersDeleted": "Read chapters deleted",
     "startReadingChapters": "Start reading %{name}",
@@ -405,27 +445,27 @@
   },
   "readerScreen": {
     "bottomSheet": {
-      "allowTextSelection": "Izinkan pemilihan teks\n",
-      "autoscroll": "Gulung otomatis\n",
-      "bionicReading": "Bionic Reading",
+      "allowTextSelection": "Text selection",
+      "autoscroll": "Auto-scroll",
+      "bionicReading": "Bionic reading",
       "tapToScroll": "Tap to scroll",
       "color": "Warna\n",
       "fontStyle": "Gaya huruf\n",
       "fullscreen": "Layar Penuh",
-      "lineHeight": "Jarak antar baris\n",
+      "lineHeight": "Line height",
       "padding": "Padding",
-      "pageReader": "Tap left or right to navigate through pages in the reader (Experimental)",
-      "removeExtraSpacing": "Menghapus tambahan baris paragraf\n",
+      "pageReader": "Paged reading (Experimental)",
+      "removeExtraSpacing": "Remove extra spacing",
       "scrollAmount": "Banyak gulung (tinggi layar secara bawaan)\n",
-      "showBatteryAndTime": "Tampilkan baterai dan waktu\n",
-      "showProgressPercentage": "Tampilkan persentase proses\n",
-      "swipeGestures": "Gesek ke kiri atau kanan untuk menjelajahi antar bab\n",
-      "textAlign": "Perataan",
+      "showBatteryAndTime": "Battery & time",
+      "showProgressPercentage": "Reading progress",
+      "swipeGestures": "Swipe between chapters",
+      "textAlign": "Text alignment",
       "textSize": "Ukuran teks\n",
-      "useChapterDrawerSwipeNavigation": "Geser ke kanan untuk membuka kamera\n",
-      "verticalSeekbar": "Bilah pencarian vertikal\n",
+      "useChapterDrawerSwipeNavigation": "Swipe to open drawer",
+      "verticalSeekbar": "Vertical seekbar",
       "keepScreenOn": "Keep screen on",
-      "volumeButtonsScroll": "Tombol volume gulung\n"
+      "volumeButtonsScroll": "Volume button scrolling"
     },
     "drawer": {
       "scrollToBottom": "Gulung ke bawah\n",
@@ -439,27 +479,29 @@
     "noPreviousChapter": "There's no previous chapter"
   },
   "readerSettings": {
-    "autoScrollInterval": "Interval menggulir otomatis (dalam detik)\n",
-    "autoScrollOffset": "Offset gulir otomatis (tinggi layar secara default)\n",
+    "autoScrollInterval": "Scroll interval (seconds)",
+    "autoScrollOffset": "Scroll offset (screen heights)",
     "backgroundColor": "Warna latar belakang\n",
-    "backgroundColorModal": "Warna latar belakang pembaca\n",
-    "clearCustomCSS": "Apa anda yakin? Custom CSS anda akan disetel ulang.\n",
-    "clearCustomJS": "Apa anda yakin? Custom JS anda akan disetel ulang.\n",
-    "cssHint": "Petunjuk: Anda dapat membuat konfigurasi CSS khusus sumber dengan ID sumber. (#sourceId-[SOURCEID])\n",
+    "backgroundColorModal": "Background color",
+    "clearCustomCSS": "Reset your custom CSS?",
+    "clearCustomJS": "Reset your custom JS?",
+    "cssHint": "Target specific sources using #sourceId-[SOURCEID] in your selectors",
     "customCSS": "Kostumisasi CSS\n",
     "customJS": "JS Khusus\n",
-    "deleteCustomTheme": "Hapus kostumisasi tema\n",
-    "jsHint": "Hint: You have access to following variables: html, novelName, chapterName, sourceId, chapterId, novelId\n",
+    "deleteCustomTheme": "Delete theme",
+    "jsHint": "Available variables: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "navigationControls": "Navigation Controls",
     "notSaved": "Tidak tersimpan\n",
-    "openCSSFile": "Buka file CSS\n",
-    "openJSFile": "Buka file JS\n",
+    "openCSSFile": "Import CSS file",
+    "openJSFile": "Import JS file",
     "preset": "Prasetel\n",
-    "readerTheme": "Tema pembaca\n",
-    "saveCustomTheme": "Simpan kostumisasi tema\n",
+    "readingMode": "Reading Mode",
+    "readerTheme": "Theme",
+    "saveCustomTheme": "Save theme",
     "textColor": "Warna teks\n",
-    "textColorModal": "Warna teks pembaca\n",
+    "textColorModal": "Text color",
     "title": "Pembaca\n",
-    "verticalSeekbarDesc": "Beralih antara bar pencarian vertikal dan horizontal\n"
+    "verticalSeekbarDesc": "Use vertical seekbar"
   },
   "sourceScreen": {
     "noResultsFound": "Tidak ada hasil ditemukan\n"
@@ -499,6 +541,17 @@
     "pickATheme": "Pick a theme",
     "light": "Light",
     "dark": "Dark",
+    "system": "System",
     "complete": "Complete"
+  },
+  "notifications": {
+    "IMPORT_EPUB": "Imported epub",
+    "UPDATE_LIBRARY": "Updated library",
+    "DRIVE_BACKUP": "Drive backup",
+    "DRIVE_RESTORE": "Drive restore",
+    "SELF_HOST_BACKUP": "Self host backup",
+    "SELF_HOST_RESTORE": "Self host restore",
+    "MIGRATE_NOVEL": "Migrated novel",
+    "DOWNLOAD_CHAPTER": "Downloaded chapter"
   }
 }
