--- a/strings/languages/pt_BR/strings.json
+++ b/strings/languages/pt_BR/strings.json
@@ -1,83 +1,102 @@
 {
   "aboutScreen": {
-    "website": "Website",
+    "website": "Site",
     "discord": "Discord",
     "github": "Github",
-    "helpTranslate": "Help translate",
-    "sources": "Sources",
-    "version": "Version",
-    "whatsNew": "What's new"
+    "helpTranslate": "Ajude a traduzir",
+    "sources": "Fontes",
+    "version": "Versão",
+    "whatsNew": "Novidades"
   },
-  "advancedSettings": "Advanced",
+  "advancedSettings": "Avancado",
   "advancedSettingsScreen": {
-    "cachedNovelsDeletedToast": "Cached novels deleted",
-    "chapterInsertFailed": "chapter insert failed",
-    "clearCachedNovels": "Clear cached novels",
-    "clearCachedNovelsDesc": "Delete cached novels which not in your library",
-    "clearDatabaseWarning": "Are you sure? Read and Downloaded chapters and progress of non-library novels will be lost.",
-    "clearUpdatesMessage": "Updates cleared.",
-    "clearUpdatesTab": "Clear updates tab",
-    "clearUpdatesWarning": "Are you sure? Updates tab will be cleared.",
-    "clearupdatesTabDesc": "Clears chapter entries in updates tab",
-    "dataManagement": "Data Management",
+    "cachedNovelsDeletedToast": "Cache de novels deletado",
+    "chapterInsertFailed": "falha ao inserir capítulo",
+    "clearCachedNovels": "Limpar capitulo em app",
+    "clearCachedNovelsDesc": "Deletar novel que não está em sua biblioteca",
+    "clearDatabaseWarning": "Read and Downloaded chapters and progress of non-library novels will be lost.",
+    "clearUpdatesMessage": "Novos capítulos limpos.",
+    "clearUpdatesTab": "Aba de limpeza de novidades",
+    "clearUpdatesWarning": "Updates tab will be cleared.",
+    "clearupdatesTabDesc": "Limpar capítulos na aba de entrada",
+    "dataManagement": "Manejo de informação",
     "deleteReadChapters": "Excluir capítulos lidos",
-    "deleteReadChaptersDialogTitle": "Você tem certeza? Todos os capítulos marcados como lidos serão excluídos.",
-    "importEpub": "Import Epub",
-    "importNovel": "Import Novel",
-    "importStaticFiles": "Import Static Files",
-    "novelInsertFailed": "novel insert failed",
-    "useFAB": "Use FAB instead of button",
-    "userAgent": "User Agent"
+    "deleteReadChaptersDialogTitle": "All chapters marked as read will be deleted.",
+    "importEpub": "Importar Epub",
+    "importNovel": "Importar livro",
+    "importStaticFiles": "Importar arquivo estático",
+    "novelInsertFailed": "falha ao inserir livro",
+    "useFAB": "Utilize FAV invez do botão",
+    "userAgent": "Agente usuário",
+    "recreateDBIndexes": "Recreate DB indexes",
+    "recreateDBIndexesToast": "Recreated DB indexes",
+    "recreateDBIndexesDialogTitle": "All DB indexes will be recreated.\nThis may take a while.",
+    "recreateDBIndexesDesc": "Recreates DB indexes. This may improve performance on slower devices."
   },
-  "appearance": "Appearance",
+  "appearance": "Aparência",
   "appearanceScreen": {
-    "accentColor": "Accent Color",
-    "alwaysShowNavLabels": "Always show nav labels",
-    "appTheme": "App theme",
-    "darkTheme": "Dark Theme",
-    "hideBackdrop": "Hide backdrop",
-    "lightTheme": "Light Theme",
-    "navbar": "Navbar",
-    "novelInfo": "Novel info",
-    "pureBlackDarkMode": "Pure black dark mode",
-    "showHistoryInTheNav": "Show history in the nav",
-    "showUpdatesInTheNav": "Show updates in the nav",
+    "accentColor": "Alterar cor",
+    "alwaysShowNavLabels": "Sempre mostrar abas de navegação",
+    "appLanguage": "App language",
+    "languagePickerModal": {
+      "title": "Select Language",
+      "restartNote": "You will need to restart the app for the language change to take full effect."
+    },
+    "appLanguageDefault": "Default",
+    "appTheme": "Tema do aplicativo",
+    "darkTheme": "Tema escuro",
+    "hideBackdrop": "Esconder fundo",
+    "lightTheme": "Tema claro",
+    "navbar": "Barra de navegação",
+    "novelInfo": "Informação do livro",
+    "pureBlackDarkMode": "Modo escuridão",
+    "showHistoryInTheNav": "Mostrar histórico no navegador",
+    "showUpdatesInTheNav": "Mostrar novidades no navegador",
+    "themeMode": "Theme mode",
+    "themeModeLight": "Light",
+    "themeModeDark": "Dark",
+    "themeModeSystem": "System",
     "theme": {
-      "default": "Default",
-      "lavender": "Lavender",
-      "midnightDusk": "Midnight Dusk",
-      "daybreakBloom": "Daybreak Bloom",
-      "strawberry": "Strawberry Daiquiri",
-      "tako": "Tako",
-      "teal": "Teal",
-      "turquoise": "Turquoise",
-      "yotsuba": "Yotsuba"
+      "default": "Padrão",
+      "lavender": "Lavanda",
+      "midnightDusk": "Entardecer",
+      "daybreakBloom": "Amanhecer",
+      "strawberry": "Caipirinha de morango",
+      "tako": "Polvo",
+      "teal": "Ciano",
+      "turquoise": "Turquesa",
+      "yotsuba": "Japonês",
+      "catppuccin": "Catppuccin",
+      "yinyang": "Yin & Yang"
     }
   },
   "backupScreen": {
-    "backupName": "Backup name",
-    "createBackup": "Create backup",
-    "createBackupDesc": "Can be used to restore current library",
-    "createBackupWarning": "Create backup may not work on devices with Android 9 or lower.",
-    "downloadingData": "Downloading Data",
-    "downloadingDownloadedFiles": "Downloading Downloaded files",
+    "backupName": "Salvar nome",
+    "backupCreated": "Backup created successfully",
+    "backupRestored": "Backup restored successfully",
+    "categoriesRestored": "Restored %{count} categories",
+    "createBackup": "Criar salvo",
+    "createBackupDesc": "Pode ser usado para restaurar biblioteca",
+    "createBackupWarning": "Salvo criado pode não funcionar em aparelhos com androide 9 ou menos.",
+    "downloadingData": "Baixando informação",
+    "downloadingDownloadedFiles": "Baixando arquivos salvos",
+    "failed": "Backup failed",
+    "novelsRestored": "Restored %{count} novels",
+    "restoringCategories": "Restoring categories...",
+    "restoringNovels": "Restoring novels...",
+    "restoringSettings": "Restoring settings...",
+    "settingsRestored": "Settings restored",
     "drive": {
-      "backup": "Drive Backup",
-      "backupInterruped": "Drive Backup Interruped",
-      "googleDriveBackup": "Google Drive Backup",
-      "restore": "Drive Restore",
-      "restoreInterruped": "Drive Restore Interruped"
+      "backup": "Salvar no Drive",
+      "backupInterruped": "",
+      "googleDriveBackup": "",
+      "restore": "",
+      "restoreInterruped": ""
     },
-    "googeDrive": "Googe Drive",
+    "googeDrive": "",
     "googeDriveDesc": "Backup to your Google Drive",
     "invalidBackupFolder": "Invalid backup folder",
-    "legacy": {
-      "backupCreated": "Backup created %{fileName}",
-      "libraryRestored": "Library Restored",
-      "noAvailableBackup": "There's no available backup",
-      "novelsRestored": "%{num} novels restored"
-    },
-    "legacyBackup": "Legacy Backup",
+    "localBackup": "Local Backup",
     "noBackupFound": "No backup found",
     "preparingData": "Preparing Data",
     "remote": {
@@ -100,6 +119,7 @@
   "browseScreen": {
     "addedToLibrary": "Adicionado à biblioteca",
     "available": "Available",
+    "deletePluginMessage": "Are you sure you want to uninstall %{name}?",
     "discover": "Descubra",
     "globalSearch": "Pesquisa global",
     "installFailed": "Installation failed: %{name}",
@@ -116,10 +136,14 @@
       "selectSourceDesc": "Select a Source To Migrate From"
     },
     "noSource": "Your library does not have any novels from this source",
+    "pinnedPlugin": "Pinned %{name}",
+    "pinnedPlugins": "Pinned plugins",
     "removeFromLibrary": "Removido da biblioteca",
     "searchbar": "Pesquisar nas fontes",
+    "searchResults": "Search results",
     "selectNovel": "Select Novel",
     "uninstalledPlugin": "Uninstalled %{name}",
+    "unpinnedPlugin": "Unpinned %{name}",
     "updateFailed": "Update failed",
     "updatedTo": "Updated to %{version}",
     "settings": {
@@ -136,7 +160,7 @@
   "categories": {
     "addCategories": "Adicionar categoria",
     "cantDeleteDefault": "You cant delete default category",
-    "default": "Default",
+    "default": "Padrão",
     "defaultCategory": "Categoria padrão",
     "deleteModal": {
       "desc": "Você quer deletar esta categoria",
@@ -146,62 +170,64 @@
     "editCategories": "Renomear Categoria",
     "emptyMsg": "Você não possui categorias. Toque no botão de mais para criar uma para organizar sua biblioteca",
     "header": "Editar categorias",
-    "local": "Local",
+    "local": "Localização",
     "setCategories": "Definir categorias",
     "setModalEmptyMsg": "Você não possui categorias. Clique no botão de editar para criar uma para organizar sua biblioteca"
   },
   "repositories": {
-    "emptyMsg": "You have no repositories. Add your first plugin repository to get started."
+    "emptyMsg": "Você não tem fontes. Adicione sua primeira para iniciar."
   },
   "common": {
-    "about": "About",
+    "about": "Sobre",
     "add": "Adicionar",
     "all": "Todos",
-    "backup": "Backup",
+    "backup": "Salvo",
     "cancel": "Cancelar",
     "categories": "Categorias",
     "chapters": "Capítulos",
     "clear": "Limpar",
-    "copiedToClipboard": "Copied to clipboard: %{name}",
-    "delete": "Delete",
-    "deleted": "Deleted %{name}",
-    "deprecated": "Deprecated",
+    "copiedToClipboard": "Copiado ao inserir: %{name}",
+    "delete": "Deletar",
+    "deleted": "Deletado %{name}",
+    "deprecated": "Depreciado",
     "display": "Exibir",
-    "done": "Done",
-    "downloads": "Downloads",
+    "done": "Depreciado",
+    "downloads": "Baixados",
     "edit": "Editar",
-    "example": "Example",
+    "example": "Exemplo",
     "filter": "Filtro",
     "globally": "globalmente",
     "install": "Instalar",
-    "logout": "Logout",
+    "logout": "Desconectar",
     "name": "Nome",
     "newUpdateAvailable": "Nova atualização disponível",
     "ok": "Confirmar",
-    "pause": "Pause",
-    "preparing": "Preparing",
-    "remove": "Remove",
+    "pause": "Pausar",
+    "preparing": "Preparando",
+    "remove": "Remover",
     "reset": "Resetar",
-    "restore": "Restore",
-    "resume": "Resume",
+    "restore": "Restaurar",
+    "resume": "Continuar",
     "retry": "Tente novamente",
     "save": "Salvar",
     "search": "Pesquisar",
     "searchFor": "Pesquisar por",
     "searchResults": "Resultados da busca",
     "settings": "Configurações",
-    "show": "Show",
-    "signIn": "Sign in",
-    "signOut": "Sign out",
+    "show": "Mostrar",
+    "signIn": "Entrar no cadastro",
+    "signOut": "Sair do cadastro",
     "sort": "Ordenar por",
-    "submit": "Aplicar"
+    "submit": "Aplicar",
+    "loading": "Loading ...",
+    "warning": "Warning"
   },
   "webview": {
-    "refresh": "Refresh",
-    "share": "Share",
-    "openInBrowser": "Open in browser",
-    "clearCookies": "Clear cookies",
-    "cookiesCleared": "Cookies cleared",
+    "refresh": "Rever",
+    "share": "Compartilhar",
+    "openInBrowser": "Abrir na internet",
+    "clearCookies": "Limpar dados temporários",
+    "cookiesCleared": "Dados temporários limpos",
     "clearData": "Clear WebView data",
     "dataDeleted": "WebView data cleared"
   },
@@ -343,15 +369,28 @@
     "chapterChapnum": "Chapter %{num}",
     "chapters": "Capítulos",
     "continueReading": "Continuar lendo",
-    "convertToEpubModal": {
-      "chaptersWarning": "Apenas capítulos baixados são incluídos no EPUB",
-      "chooseLocation": "Selecionar pasta de armazenamento EPUB",
-      "pathToFolder": "Caminho para pasta de salvamento de EPUB",
-      "useCustomCSS": "Usar CSS personalizado",
-      "useCustomJS": "Usar JS personalizado",
-      "useCustomJSWarning": "Pode não ser suportado por todos os leitores de EPUB",
-      "useReaderTheme": "Usar tema de leitor"
+    "exportEpubModal": {
+      "applyReaderTheme": "Apply reader theme to EPUB",
+      "customJSWarning": "Custom JS may not be supported by all EPUB readers",
+      "downloadedChaptersOnly": "Only downloaded chapters will be included in the EPUB file",
+      "endChapter": "End Chapter",
+      "exportAll": "Export All Chapters",
+      "includeCustomCSS": "Include Custom CSS",
+      "includeCustomJS": "Include Custom JS",
+      "invalidRange": "Please enter valid chapter numbers",
+      "selectFolder": "Select destination folder for EPUB file",
+      "startChapter": "Start Chapter",
+      "startGreaterThanEnd": "Start chapter must be less than or equal to end chapter",
+      "title": "Export Novel as EPUB"
     },
+    "epub": {
+      "exportFailed": "Failed to export EPUB: %{error}",
+      "exportSuccess": "Successfully exported %{chapters} chapters as EPUB",
+      "noDownloadedChapters": "No downloaded chapters found. Please download chapters before exporting.",
+      "noNovelSelected": "No novel selected for export"
+    },
+    "coverSaved": "Cover saved",
+    "coverNotSaved": "Cover not saved",
     "deleteChapterError": "Cant delete chapter chapter folder",
     "deleteMessage": "Delete downloaded chapters?",
     "deletedAllDownloads": "Deleted all Downloads",
@@ -386,6 +425,7 @@
     },
     "migrate": "Migrar",
     "noSummary": "Nenhum resumo",
+    "noCoverFound": "No cover found",
     "progress": "Progress %{progress} %",
     "readChaptersDeleted": "Read chapters deleted",
     "startReadingChapters": "Start reading %{name}",
@@ -405,27 +445,27 @@
   },
   "readerScreen": {
     "bottomSheet": {
-      "allowTextSelection": "Permitir seleção de texto",
-      "autoscroll": "Rolagem automática",
-      "bionicReading": "Leitura Biônica",
+      "allowTextSelection": "Text selection",
+      "autoscroll": "Auto-scroll",
+      "bionicReading": "Bionic reading",
       "tapToScroll": "Tap to scroll",
       "color": "Cor",
       "fontStyle": "Estilo da fonte",
       "fullscreen": "Tela cheia",
-      "lineHeight": "Altura da linha",
+      "lineHeight": "Line height",
       "padding": "Padding",
-      "pageReader": "Toque no lado esquerdo ou direito para navegar pelas páginas no leitor (experimental)",
-      "removeExtraSpacing": "Remover espaçamento extra dos parágrafos",
+      "pageReader": "Paged reading (Experimental)",
+      "removeExtraSpacing": "Remove extra spacing",
       "scrollAmount": "Valor da rolagem (Padrão: altura da tela)",
-      "showBatteryAndTime": "Mostrar bateria e hora",
-      "showProgressPercentage": "Exibir porcentagem do progresso",
-      "swipeGestures": "Deslize para esquerda/direita para navegar entre capítulos",
-      "textAlign": "Alinhamento de texto",
+      "showBatteryAndTime": "Battery & time",
+      "showProgressPercentage": "Reading progress",
+      "swipeGestures": "Swipe between chapters",
+      "textAlign": "Text alignment",
       "textSize": "Tamanho do texto",
-      "useChapterDrawerSwipeNavigation": "Deslize para a direita para abrir a gaveta",
-      "verticalSeekbar": "Barra de Busca Vertical",
+      "useChapterDrawerSwipeNavigation": "Swipe to open drawer",
+      "verticalSeekbar": "Vertical seekbar",
       "keepScreenOn": "Keep screen on",
-      "volumeButtonsScroll": "Deslizar com os botões de volume"
+      "volumeButtonsScroll": "Volume button scrolling"
     },
     "drawer": {
       "scrollToBottom": "Rolar para o final",
@@ -439,27 +479,29 @@
     "noPreviousChapter": "There's no previous chapter"
   },
   "readerSettings": {
-    "autoScrollInterval": "Intervalo de rolagem automática (em segundos)",
-    "autoScrollOffset": "Deslocamento automático de rolagem (altura padrão da tela)",
+    "autoScrollInterval": "Scroll interval (seconds)",
+    "autoScrollOffset": "Scroll offset (screen heights)",
     "backgroundColor": "Cor de fundo",
-    "backgroundColorModal": "Cor de fundo do  leitor",
-    "clearCustomCSS": "Você tem certeza? Seu CSS personalizado será resetado.",
-    "clearCustomJS": "Você tem certeza? Seu JS personalizado será resetado.",
-    "cssHint": "Dica: Você pode criar uma configuração CSS específica para cada origem com a ID da origem. (#sourceId-[SOURCEID])",
+    "backgroundColorModal": "Background color",
+    "clearCustomCSS": "Reset your custom CSS?",
+    "clearCustomJS": "Reset your custom JS?",
+    "cssHint": "Target specific sources using #sourceId-[SOURCEID] in your selectors",
     "customCSS": "CSS Personalizado",
     "customJS": "CSS Personalizado",
-    "deleteCustomTheme": "Excluir tema personalizado",
-    "jsHint": "Dica: Você tem acesso às seguintes variáveis: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "deleteCustomTheme": "Delete theme",
+    "jsHint": "Available variables: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "navigationControls": "Navigation Controls",
     "notSaved": "Não foi salvo",
-    "openCSSFile": "Abrir arquivo CSS",
-    "openJSFile": "Abrir arquivo JS",
+    "openCSSFile": "Import CSS file",
+    "openJSFile": "Import JS file",
     "preset": "Predefinição",
-    "readerTheme": "Tema do leitor",
-    "saveCustomTheme": "Salvar tema personalizado",
+    "readingMode": "Reading Mode",
+    "readerTheme": "Theme",
+    "saveCustomTheme": "Save theme",
     "textColor": "Cor do Texto",
-    "textColorModal": "Cor do texto do leitor",
+    "textColorModal": "Text color",
     "title": "Leitor",
-    "verticalSeekbarDesc": "Alternar entre barra de busca vertical e horizontal"
+    "verticalSeekbarDesc": "Use vertical seekbar"
   },
   "sourceScreen": {
     "noResultsFound": "Nenhum resultado encontrado"
@@ -499,6 +541,17 @@
     "pickATheme": "Pick a theme",
     "light": "Light",
     "dark": "Dark",
+    "system": "System",
     "complete": "Complete"
+  },
+  "notifications": {
+    "IMPORT_EPUB": "Imported epub",
+    "UPDATE_LIBRARY": "Updated library",
+    "DRIVE_BACKUP": "Drive backup",
+    "DRIVE_RESTORE": "Drive restore",
+    "SELF_HOST_BACKUP": "Self host backup",
+    "SELF_HOST_RESTORE": "Self host restore",
+    "MIGRATE_NOVEL": "Migrated novel",
+    "DOWNLOAD_CHAPTER": "Downloaded chapter"
   }
 }
