--- a/strings/languages/vi_VN/strings.json
+++ b/strings/languages/vi_VN/strings.json
@@ -14,25 +14,35 @@
     "chapterInsertFailed": "lỗi khi thêm chương",
     "clearCachedNovels": "Dọn truyện được lưu tạm thời",
     "clearCachedNovelsDesc": "Xoá bỏ những truyện không có trong thư viện",
-    "clearDatabaseWarning": "Bạn chắc chứ? Những chương đã đọc, tải xuống và tiến trình của các truyện không nằm trong thư viện sẽ bị mất.",
+    "clearDatabaseWarning": "Read and Downloaded chapters and progress of non-library novels will be lost.",
     "clearUpdatesMessage": "Đã dọn cập nhật.",
     "clearUpdatesTab": "Dọn mục cập nhật",
-    "clearUpdatesWarning": "Bạn chắc chứ? Mục cập nhật sẽ được dọn dẹp.",
+    "clearUpdatesWarning": "Updates tab will be cleared.",
     "clearupdatesTabDesc": "Dọn dẹp các chương truyện ở trong mục cập nhật",
     "dataManagement": "Quản lý dữ liệu",
     "deleteReadChapters": "Xóa chương đã đọc",
-    "deleteReadChaptersDialogTitle": "Bạn có chắc không? Toàn bộ chương được đánh đã đọc sẽ bị xoá.",
+    "deleteReadChaptersDialogTitle": "All chapters marked as read will be deleted.",
     "importEpub": "Nhập file Epub",
     "importNovel": "Nhập truyện",
     "importStaticFiles": "Nhập tệp tin tĩnh",
     "novelInsertFailed": "lỗi khi thêm truyện",
     "useFAB": "Sử dụng nút nổi",
-    "userAgent": "User Agent"
+    "userAgent": "User Agent",
+    "recreateDBIndexes": "Recreate DB indexes",
+    "recreateDBIndexesToast": "Recreated DB indexes",
+    "recreateDBIndexesDialogTitle": "All DB indexes will be recreated.\nThis may take a while.",
+    "recreateDBIndexesDesc": "Recreates DB indexes. This may improve performance on slower devices."
   },
   "appearance": "Giao diện",
   "appearanceScreen": {
     "accentColor": "Màu chủ đạo",
     "alwaysShowNavLabels": "Luôn hiển thị tiêu đề thanh điều hướng",
+    "appLanguage": "App language",
+    "languagePickerModal": {
+      "title": "Select Language",
+      "restartNote": "You will need to restart the app for the language change to take full effect."
+    },
+    "appLanguageDefault": "Default",
     "appTheme": "Chủ đề",
     "darkTheme": "Màu tối",
     "hideBackdrop": "Ẩn bóng",
@@ -42,6 +52,10 @@
     "pureBlackDarkMode": "Màu đen tuyền",
     "showHistoryInTheNav": "Hiển thị mục lịch sử",
     "showUpdatesInTheNav": "Hiển thị mục cập nhật",
+    "themeMode": "Theme mode",
+    "themeModeLight": "Light",
+    "themeModeDark": "Dark",
+    "themeModeSystem": "System",
     "theme": {
       "default": "Mặc định",
       "lavender": "Oải hương",
@@ -51,16 +65,27 @@
       "tako": "Tako",
       "teal": "Xanh mòng két",
       "turquoise": "Ngọc lam",
-      "yotsuba": "Cỏ bốn lá"
+      "yotsuba": "Cỏ bốn lá",
+      "catppuccin": "Catppuccin",
+      "yinyang": "Yin & Yang"
     }
   },
   "backupScreen": {
     "backupName": "Tên sao lưu",
+    "backupCreated": "Backup created successfully",
+    "backupRestored": "Backup restored successfully",
+    "categoriesRestored": "Restored %{count} categories",
     "createBackup": "Tạo sao lưu",
     "createBackupDesc": "Được dùng để khôi phục thư viện của bạn",
     "createBackupWarning": "Tạo sao lưu có thể không hoạt đông ở Android 9 hoặc thấp hơn.",
     "downloadingData": "Đang tải xuống dữ liệu",
     "downloadingDownloadedFiles": "Đang tải xuống các tệp",
+    "failed": "Backup failed",
+    "novelsRestored": "Restored %{count} novels",
+    "restoringCategories": "Restoring categories...",
+    "restoringNovels": "Restoring novels...",
+    "restoringSettings": "Restoring settings...",
+    "settingsRestored": "Settings restored",
     "drive": {
       "backup": "Sao lưu qua Drive",
       "backupInterruped": "Sao lưu bị gián đoạn",
@@ -71,13 +96,7 @@
     "googeDrive": "Google Drive",
     "googeDriveDesc": "Sao lưu vào Google Drive của bạn",
     "invalidBackupFolder": "Thư mục sao lưu không hợp lệ",
-    "legacy": {
-      "backupCreated": "Sao lưu được tạo %{fileName}",
-      "libraryRestored": "Thư viện đã được khôi phục",
-      "noAvailableBackup": "Không có sao lưu nào",
-      "novelsRestored": "%{num} truyện được khôi phục"
-    },
-    "legacyBackup": "Sao lưu cũ",
+    "localBackup": "Local Backup",
     "noBackupFound": "Không tìm thấy sao lưu",
     "preparingData": "Chuẩn bị dữ liệu",
     "remote": {
@@ -100,6 +119,7 @@
   "browseScreen": {
     "addedToLibrary": "Đã thêm vào Thư viện",
     "available": "Sẵn có",
+    "deletePluginMessage": "Are you sure you want to uninstall %{name}?",
     "discover": "Khám phá",
     "globalSearch": "Tìm kiếm mở rộng",
     "installFailed": "Cài đặt lỗi: %{name}",
@@ -116,10 +136,14 @@
       "selectSourceDesc": "Chọn nguồn cần chuyển đổi"
     },
     "noSource": "Thư viện của bạn không có truyện nào từ nguồn này",
+    "pinnedPlugin": "Pinned %{name}",
+    "pinnedPlugins": "Pinned plugins",
     "removeFromLibrary": "Đã xoá khỏi thư viện",
     "searchbar": "Tìm nguồn truyện",
+    "searchResults": "Search results",
     "selectNovel": "Chọn truyện",
     "uninstalledPlugin": "Gỡ cài đặt %{name}",
+    "unpinnedPlugin": "Unpinned %{name}",
     "updateFailed": "Cập nhật thất bại",
     "updatedTo": "Đã cập nhật lên %{version}",
     "settings": {
@@ -194,7 +218,9 @@
     "signIn": "Đăng nhập",
     "signOut": "Đăng xuất",
     "sort": "Sắp xếp",
-    "submit": "Gửi"
+    "submit": "Gửi",
+    "loading": "Loading ...",
+    "warning": "Warning"
   },
   "webview": {
     "refresh": "Làm mới",
@@ -343,15 +369,28 @@
     "chapterChapnum": "Chương %{num}",
     "chapters": "chương",
     "continueReading": "Tiếp tục đọc",
-    "convertToEpubModal": {
-      "chaptersWarning": "Only downloaded chapters are included in the EPUB",
-      "chooseLocation": "Select EPUB storage directory",
-      "pathToFolder": "Path to EPUB save folder",
-      "useCustomCSS": "Use custom CSS",
-      "useCustomJS": "Use custom JS",
-      "useCustomJSWarning": "May not be supported by all EPUB readers",
-      "useReaderTheme": "Use reader theme"
+    "exportEpubModal": {
+      "applyReaderTheme": "Apply reader theme to EPUB",
+      "customJSWarning": "Custom JS may not be supported by all EPUB readers",
+      "downloadedChaptersOnly": "Only downloaded chapters will be included in the EPUB file",
+      "endChapter": "End Chapter",
+      "exportAll": "Export All Chapters",
+      "includeCustomCSS": "Include Custom CSS",
+      "includeCustomJS": "Include Custom JS",
+      "invalidRange": "Please enter valid chapter numbers",
+      "selectFolder": "Select destination folder for EPUB file",
+      "startChapter": "Start Chapter",
+      "startGreaterThanEnd": "Start chapter must be less than or equal to end chapter",
+      "title": "Export Novel as EPUB"
     },
+    "epub": {
+      "exportFailed": "Failed to export EPUB: %{error}",
+      "exportSuccess": "Successfully exported %{chapters} chapters as EPUB",
+      "noDownloadedChapters": "No downloaded chapters found. Please download chapters before exporting.",
+      "noNovelSelected": "No novel selected for export"
+    },
+    "coverSaved": "Cover saved",
+    "coverNotSaved": "Cover not saved",
     "deleteChapterError": "Không thể xoá thư mục chương",
     "deleteMessage": "Xoá chương đã tải xuống?",
     "deletedAllDownloads": "Xoá tất cả tải xuống",
@@ -386,6 +425,7 @@
     },
     "migrate": "Đồng bộ",
     "noSummary": "Không có tóm tắt",
+    "noCoverFound": "No cover found",
     "progress": "Tiến trình %{progress} %",
     "readChaptersDeleted": "Đã xoá chương đã đọc",
     "startReadingChapters": "Bắt đầu đọc %{name}",
@@ -405,27 +445,27 @@
   },
   "readerScreen": {
     "bottomSheet": {
-      "allowTextSelection": "Cho phép bôi đen chữ",
-      "autoscroll": "Cuộn tự động",
-      "bionicReading": "Bionic Reading",
+      "allowTextSelection": "Text selection",
+      "autoscroll": "Auto-scroll",
+      "bionicReading": "Bionic reading",
       "tapToScroll": "Ấn để cuộn",
       "color": "Màu chữ",
       "fontStyle": "Phông chữ",
       "fullscreen": "Toàn màn hình",
-      "lineHeight": "Chiều cao dòng",
+      "lineHeight": "Line height",
       "padding": "Khoảng đệm",
-      "pageReader": "Tap left or right to navigate through pages in the reader (Experimental)",
-      "removeExtraSpacing": "Xoá khoảng trống thừa",
+      "pageReader": "Paged reading (Experimental)",
+      "removeExtraSpacing": "Remove extra spacing",
       "scrollAmount": "Scroll amount (screen height by default)",
-      "showBatteryAndTime": "Hiển thị pin và giờ",
-      "showProgressPercentage": "Hiện tiến trình",
-      "swipeGestures": "Vuốt để đổi chương",
-      "textAlign": "Căn lề",
+      "showBatteryAndTime": "Battery & time",
+      "showProgressPercentage": "Reading progress",
+      "swipeGestures": "Swipe between chapters",
+      "textAlign": "Text alignment",
       "textSize": "Cỡ chữ",
-      "useChapterDrawerSwipeNavigation": "Vuốt phải để hiện danh sách",
-      "verticalSeekbar": "Thanh trạng thái dọc",
+      "useChapterDrawerSwipeNavigation": "Swipe to open drawer",
+      "verticalSeekbar": "Vertical seekbar",
       "keepScreenOn": "Giữ màn hình luôn sáng",
-      "volumeButtonsScroll": "Cuộn bằng nút âm lượng"
+      "volumeButtonsScroll": "Volume button scrolling"
     },
     "drawer": {
       "scrollToBottom": "Xuống cuối",
@@ -439,27 +479,29 @@
     "noPreviousChapter": "Không có chương kế tiếp"
   },
   "readerSettings": {
-    "autoScrollInterval": "Thời gian tự động cuộn (giây)",
-    "autoScrollOffset": "Khoảng cách tự động cuộn (mặc định chiều cao màn hình)",
+    "autoScrollInterval": "Scroll interval (seconds)",
+    "autoScrollOffset": "Scroll offset (screen heights)",
     "backgroundColor": "Màu nền",
-    "backgroundColorModal": "Màu nền của trang đọc",
-    "clearCustomCSS": "Are you sure? Your custom CSS would be reset.",
-    "clearCustomJS": "Are you sure? Your custom JS would be reset.",
-    "cssHint": "Hint: You can create source specific CSS configuration with the source ID. (#sourceId-[SOURCEID])",
+    "backgroundColorModal": "Background color",
+    "clearCustomCSS": "Reset your custom CSS?",
+    "clearCustomJS": "Reset your custom JS?",
+    "cssHint": "Target specific sources using #sourceId-[SOURCEID] in your selectors",
     "customCSS": "CSS Tùy chỉnh",
     "customJS": "Custom JS",
-    "deleteCustomTheme": "Xoá tuỳ chỉnh giao diện",
-    "jsHint": "Hint: You have access to following variables: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "deleteCustomTheme": "Delete theme",
+    "jsHint": "Available variables: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "navigationControls": "Navigation Controls",
     "notSaved": "Not saved",
-    "openCSSFile": "Open CSS file",
-    "openJSFile": "Open JS file",
+    "openCSSFile": "Import CSS file",
+    "openJSFile": "Import JS file",
     "preset": "Mẫu sẵn có",
-    "readerTheme": "Giao diện đọc",
-    "saveCustomTheme": "Lưu tùy chỉnh giao diện",
+    "readingMode": "Reading Mode",
+    "readerTheme": "Theme",
+    "saveCustomTheme": "Save theme",
     "textColor": "Màu chữ",
-    "textColorModal": "Màu chữ trang đọc",
+    "textColorModal": "Text color",
     "title": "Trang đọc",
-    "verticalSeekbarDesc": "Chuyển hướng thanh trạng thái dọc hoặc ngang"
+    "verticalSeekbarDesc": "Use vertical seekbar"
   },
   "sourceScreen": {
     "noResultsFound": "Không tìm thấy kết quả"
@@ -499,6 +541,17 @@
     "pickATheme": "Hãy chọn chủ đề",
     "light": "Sáng",
     "dark": "Tối",
+    "system": "System",
     "complete": "Hoàn tất"
+  },
+  "notifications": {
+    "IMPORT_EPUB": "Imported epub",
+    "UPDATE_LIBRARY": "Updated library",
+    "DRIVE_BACKUP": "Drive backup",
+    "DRIVE_RESTORE": "Drive restore",
+    "SELF_HOST_BACKUP": "Self host backup",
+    "SELF_HOST_RESTORE": "Self host restore",
+    "MIGRATE_NOVEL": "Migrated novel",
+    "DOWNLOAD_CHAPTER": "Downloaded chapter"
   }
 }
