--- a/strings/languages/ar_SA/strings.json
+++ b/strings/languages/ar_SA/strings.json
@@ -1,66 +1,91 @@
 {
   "aboutScreen": {
-    "website": "Website",
-    "discord": "Discord",
-    "github": "Github",
-    "helpTranslate": "Help translate",
-    "sources": "Sources",
-    "version": "Version",
-    "whatsNew": "What's new"
+    "website": "الموقع",
+    "discord": "ديس كورد",
+    "github": "كيت هاب",
+    "helpTranslate": "المساعدة في الترجَمة",
+    "sources": "المصدر",
+    "version": "آلإصدار",
+    "whatsNew": "ما الجديد"
   },
-  "advancedSettings": "Advanced",
+  "advancedSettings": "متقدم",
   "advancedSettingsScreen": {
-    "cachedNovelsDeletedToast": "Cached novels deleted",
-    "chapterInsertFailed": "chapter insert failed",
-    "clearCachedNovels": "Clear cached novels",
-    "clearCachedNovelsDesc": "Delete cached novels which not in your library",
-    "clearDatabaseWarning": "Are you sure? Read and Downloaded chapters and progress of non-library novels will be lost.",
-    "clearUpdatesMessage": "Updates cleared.",
-    "clearUpdatesTab": "Clear updates tab",
-    "clearUpdatesWarning": "Are you sure? Updates tab will be cleared.",
-    "clearupdatesTabDesc": "Clears chapter entries in updates tab",
-    "dataManagement": "Data Management",
+    "cachedNovelsDeletedToast": "تم حذف الروايات المخزنة مؤقتًا",
+    "chapterInsertFailed": "فشل إدراج الفصل",
+    "clearCachedNovels": "مسح الروايات المخزنة مؤقتا",
+    "clearCachedNovelsDesc": "احذف الروايات المخزنة مؤقتًا و التي ليست موجودة في مكتبتك",
+    "clearDatabaseWarning": ".",
+    "clearUpdatesMessage": "تمت إزالة التحديثات.",
+    "clearUpdatesTab": "مسح علامة تبويب التحديثات",
+    "clearUpdatesWarning": "Updates tab will be cleared.",
+    "clearupdatesTabDesc": "مسح إدخالات الفصول في علامة تبويب التحديثات",
+    "dataManagement": "إدارة البيانات",
     "deleteReadChapters": "حذف الفصول المقروءة",
-    "deleteReadChaptersDialogTitle": "هل أنت متأكد؟ سيتم حذف جميع الفصول المعلَّمة كمقروءة.",
-    "importEpub": "Import Epub",
-    "importNovel": "Import Novel",
-    "importStaticFiles": "Import Static Files",
-    "novelInsertFailed": "novel insert failed",
+    "deleteReadChaptersDialogTitle": "All chapters marked as read will be deleted.",
+    "importEpub": "استيراد EPUB",
+    "importNovel": "استيراد رواية",
+    "importStaticFiles": "استيراد الملفات الثابتة",
+    "novelInsertFailed": "فشل إدراج الرواية",
     "useFAB": "Use FAB instead of button",
-    "userAgent": "User Agent"
+    "userAgent": "وكيل المستخدم",
+    "recreateDBIndexes": "",
+    "recreateDBIndexesToast": "Recreated DB indexes",
+    "recreateDBIndexesDialogTitle": "All DB indexes will be recreated.\nThis may take a while.",
+    "recreateDBIndexesDesc": "Recreates DB indexes. This may improve performance on slower devices."
   },
-  "appearance": "Appearance",
+  "appearance": "مظهر",
   "appearanceScreen": {
-    "accentColor": "Accent Color",
-    "alwaysShowNavLabels": "Always show nav labels",
-    "appTheme": "App theme",
-    "darkTheme": "Dark Theme",
-    "hideBackdrop": "Hide backdrop",
-    "lightTheme": "Light Theme",
-    "navbar": "Navbar",
-    "novelInfo": "Novel info",
-    "pureBlackDarkMode": "Pure black dark mode",
-    "showHistoryInTheNav": "Show history in the nav",
-    "showUpdatesInTheNav": "Show updates in the nav",
+    "accentColor": "لون مميز",
+    "alwaysShowNavLabels": "إظهار تسميات التنقل دائمًا",
+    "appLanguage": "App language",
+    "languagePickerModal": {
+      "title": "Select Language",
+      "restartNote": "You will need to restart the app for the language change to take full effect."
+    },
+    "appLanguageDefault": "Default",
+    "appTheme": "مظهر التطبيق",
+    "darkTheme": "المظهر الداكن",
+    "hideBackdrop": "إخفاء الخلفية",
+    "lightTheme": "المظهر الفاتح",
+    "navbar": "شريط التنقل",
+    "novelInfo": "معلومات الرواية",
+    "pureBlackDarkMode": "الأسود القاتم للوضع الداكن",
+    "showHistoryInTheNav": "إظهار التاريخ في شريط التنقل",
+    "showUpdatesInTheNav": "إظهار التحديثات في شريط التنقل",
+    "themeMode": "Theme mode",
+    "themeModeLight": "Light",
+    "themeModeDark": "Dark",
+    "themeModeSystem": "System",
     "theme": {
-      "default": "Default",
-      "lavender": "Lavender",
-      "midnightDusk": "Midnight Dusk",
+      "default": "تلقائي",
+      "lavender": "",
+      "midnightDusk": "صخرة منتصف الليل",
       "daybreakBloom": "Daybreak Bloom",
       "strawberry": "Strawberry Daiquiri",
       "tako": "Tako",
       "teal": "Teal",
       "turquoise": "Turquoise",
-      "yotsuba": "Yotsuba"
+      "yotsuba": "Yotsuba",
+      "catppuccin": "Catppuccin",
+      "yinyang": "Yin & Yang"
     }
   },
   "backupScreen": {
-    "backupName": "Backup name",
-    "createBackup": "Create backup",
+    "backupName": "اسم النسخة الاحتياطية",
+    "backupCreated": "Backup created successfully",
+    "backupRestored": "Backup restored successfully",
+    "categoriesRestored": "Restored %{count} categories",
+    "createBackup": "إنشاء نسخة احتياطية",
     "createBackupDesc": "Can be used to restore current library",
     "createBackupWarning": "Create backup may not work on devices with Android 9 or lower.",
     "downloadingData": "Downloading Data",
     "downloadingDownloadedFiles": "Downloading Downloaded files",
+    "failed": "Backup failed",
+    "novelsRestored": "Restored %{count} novels",
+    "restoringCategories": "Restoring categories...",
+    "restoringNovels": "Restoring novels...",
+    "restoringSettings": "Restoring settings...",
+    "settingsRestored": "Settings restored",
     "drive": {
       "backup": "Drive Backup",
       "backupInterruped": "Drive Backup Interruped",
@@ -71,13 +96,7 @@
     "googeDrive": "Googe Drive",
     "googeDriveDesc": "Backup to your Google Drive",
     "invalidBackupFolder": "Invalid backup folder",
-    "legacy": {
-      "backupCreated": "Backup created %{fileName}",
-      "libraryRestored": "Library Restored",
-      "noAvailableBackup": "There's no available backup",
-      "novelsRestored": "%{num} novels restored"
-    },
-    "legacyBackup": "Legacy Backup",
+    "localBackup": "Local Backup",
     "noBackupFound": "No backup found",
     "preparingData": "Preparing Data",
     "remote": {
@@ -99,7 +118,8 @@
   "browse": "تصفح",
   "browseScreen": {
     "addedToLibrary": "تمت الإضافة إلى المكتبة",
-    "available": "Available",
+    "available": "متاح",
+    "deletePluginMessage": "Are you sure you want to uninstall %{name}?",
     "discover": "استكشف",
     "globalSearch": "بحث عام",
     "installFailed": "Installation failed: %{name}",
@@ -116,11 +136,15 @@
       "selectSourceDesc": "Select a Source To Migrate From"
     },
     "noSource": "Your library does not have any novels from this source",
+    "pinnedPlugin": "Pinned %{name}",
+    "pinnedPlugins": "Pinned plugins",
     "removeFromLibrary": "تمت إزالته من المكتبة",
     "searchbar": "البحث في المصادر",
+    "searchResults": "Search results",
     "selectNovel": "Select Novel",
     "uninstalledPlugin": "Uninstalled %{name}",
-    "updateFailed": "Update failed",
+    "unpinnedPlugin": "Unpinned %{name}",
+    "updateFailed": "",
     "updatedTo": "Updated to %{version}",
     "settings": {
       "title": "Plugin Settings",
@@ -156,7 +180,7 @@
   "common": {
     "about": "About",
     "add": "إضافة",
-    "all": "الجميع",
+    "all": "الكل",
     "backup": "Backup",
     "cancel": "الغاء",
     "categories": "تصنيفات",
@@ -194,7 +218,9 @@
     "signIn": "Sign in",
     "signOut": "Sign out",
     "sort": "الفرز",
-    "submit": "إرسال"
+    "submit": "إرسال",
+    "loading": "Loading ...",
+    "warning": "Warning"
   },
   "webview": {
     "refresh": "Refresh",
@@ -229,11 +255,11 @@
   },
   "generalSettings": "العامة",
   "generalSettingsScreen": {
-    "asc": "ترتيب تصاعدي",
+    "asc": "(ترتيب تصاعدي)",
     "autoDownload": "التحميل التلقائي",
     "bySource": "حسب المصدر",
     "chapterSort": "الفرز الافتراضي للفصول",
-    "desc": "ترتيب تنازلي",
+    "desc": "(ترتيب تنازلي)",
     "disableLoadingAnimations": "Disable loading animations",
     "disableLoadingAnimationsDesc": "May improve performance on slower devices",
     "disableHapticFeedback": "تعطيل الاهتزاز",
@@ -253,7 +279,7 @@
     "novelBadges": "شارات الرواية",
     "novelSort": "فرز الروايات",
     "refreshMetadata": "تحديث البيانات الوصفية تلقائيًا",
-    "refreshMetadataDescription": "تحقق من الغلاف الجديد ",
+    "refreshMetadataDescription": "تحقق الغلاف الجديد و التفاصيل عند تحديث المكتبة",
     "sortOrder": "Sort Order",
     "updateLibrary": "تحديث المكتبة عند تشغيل التطبيق",
     "updateLibraryDesc": "Not recommended for low devices",
@@ -343,15 +369,28 @@
     "chapterChapnum": "Chapter %{num}",
     "chapters": "الفصول",
     "continueReading": "متابعة القراءة",
-    "convertToEpubModal": {
-      "chaptersWarning": "الفصول المحملة فقط مدرجة في EPUB",
-      "chooseLocation": "حدد مسار تخزين ملفات EPUB",
-      "pathToFolder": "مسار مجلد لحفظ EPUB",
-      "useCustomCSS": "استخدام CSS مخصص",
-      "useCustomJS": "استخدام JS مخصص",
-      "useCustomJSWarning": "قد لا يكون مدعوماً من كل قراء EPUB",
-      "useReaderTheme": "استخدام قالب القارئ"
+    "exportEpubModal": {
+      "applyReaderTheme": "Apply reader theme to EPUB",
+      "customJSWarning": "Custom JS may not be supported by all EPUB readers",
+      "downloadedChaptersOnly": "Only downloaded chapters will be included in the EPUB file",
+      "endChapter": "End Chapter",
+      "exportAll": "Export All Chapters",
+      "includeCustomCSS": "Include Custom CSS",
+      "includeCustomJS": "Include Custom JS",
+      "invalidRange": "Please enter valid chapter numbers",
+      "selectFolder": "Select destination folder for EPUB file",
+      "startChapter": "Start Chapter",
+      "startGreaterThanEnd": "Start chapter must be less than or equal to end chapter",
+      "title": "Export Novel as EPUB"
     },
+    "epub": {
+      "exportFailed": "Failed to export EPUB: %{error}",
+      "exportSuccess": "Successfully exported %{chapters} chapters as EPUB",
+      "noDownloadedChapters": "No downloaded chapters found. Please download chapters before exporting.",
+      "noNovelSelected": "No novel selected for export"
+    },
+    "coverSaved": "Cover saved",
+    "coverNotSaved": "Cover not saved",
     "deleteChapterError": "Cant delete chapter chapter folder",
     "deleteMessage": "Delete downloaded chapters?",
     "deletedAllDownloads": "Deleted all Downloads",
@@ -386,6 +425,7 @@
     },
     "migrate": "نقل",
     "noSummary": "لا يوجد ملخص",
+    "noCoverFound": "No cover found",
     "progress": "Progress %{progress} %",
     "readChaptersDeleted": "Read chapters deleted",
     "startReadingChapters": "Start reading %{name}",
@@ -405,27 +445,27 @@
   },
   "readerScreen": {
     "bottomSheet": {
-      "allowTextSelection": "السماح باختيار النص",
-      "autoscroll": "تدوير تلقائي",
-      "bionicReading": "القراءة الثنائية",
+      "allowTextSelection": "Text selection",
+      "autoscroll": "Auto-scroll",
+      "bionicReading": "Bionic reading",
       "tapToScroll": "Tap to scroll",
       "color": "اللون",
       "fontStyle": "نمط الخط",
       "fullscreen": "تكبير الشاشة",
-      "lineHeight": "ارتفاع الخط",
+      "lineHeight": "Line height",
       "padding": "Padding",
-      "pageReader": "انقر يمينا أو يساراً للتنقل بين صفحات القارئ (تجريبي)",
-      "removeExtraSpacing": "إزالة المسافات الزائدة بين الفقرات",
+      "pageReader": "Paged reading (Experimental)",
+      "removeExtraSpacing": "Remove extra spacing",
       "scrollAmount": "مقدار التمرير (افتراضيًا طول الشاشة)",
-      "showBatteryAndTime": "اضهر البطارية والوقت",
-      "showProgressPercentage": "النسبة المئوية للتقدم",
-      "swipeGestures": "اسحب لليسار أو لليمين للتنقل بين الفصول",
-      "textAlign": "اتجاه النص",
+      "showBatteryAndTime": "Battery & time",
+      "showProgressPercentage": "Reading progress",
+      "swipeGestures": "Swipe between chapters",
+      "textAlign": "Text alignment",
       "textSize": "حجم الخط",
-      "useChapterDrawerSwipeNavigation": "مرر يمينا لفتح القائمة الجانبية",
-      "verticalSeekbar": "شريط البحث العمودي",
+      "useChapterDrawerSwipeNavigation": "Swipe to open drawer",
+      "verticalSeekbar": "Vertical seekbar",
       "keepScreenOn": "Keep screen on",
-      "volumeButtonsScroll": "تمرير أزرار الصوت"
+      "volumeButtonsScroll": "Volume button scrolling"
     },
     "drawer": {
       "scrollToBottom": "التمرير للأسفل",
@@ -439,27 +479,29 @@
     "noPreviousChapter": "There's no previous chapter"
   },
   "readerSettings": {
-    "autoScrollInterval": "فترة التمرير التلقائي (بالثواني)",
-    "autoScrollOffset": "تمرير إزاحة تلقائية (ارتفاع الشاشة افتراضي)",
+    "autoScrollInterval": "Scroll interval (seconds)",
+    "autoScrollOffset": "Scroll offset (screen heights)",
     "backgroundColor": "لون الخلفية",
-    "backgroundColorModal": "لون خلفية القراءة",
-    "clearCustomCSS": "هل أنت متأكد؟ سيتم إعادة CSS الخاص بك إلي الحالة الافتراضية.",
-    "clearCustomJS": "هل أنت متأكد؟ سيتم إعادة JS الخاص بك إلي الحالة الافتراضية.",
-    "cssHint": "تلميح: يمكنك إنشاء تضبيطات CSS مخصصة لمصدر محدد باستخدام معرفه. (#sourceId-[SOURCEID])",
+    "backgroundColorModal": "Background color",
+    "clearCustomCSS": "Reset your custom CSS?",
+    "clearCustomJS": "Reset your custom JS?",
+    "cssHint": "Target specific sources using #sourceId-[SOURCEID] in your selectors",
     "customCSS": "تنسيقات CSS مخصصة",
-    "customJS": "JS حسب التفضيل",
-    "deleteCustomTheme": "حذف السمة المخصصة",
-    "jsHint": "تلميح: يمكنك الوصول إلى المتغيرات التالية واستخدامها: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "customJS": "مخصص JS",
+    "deleteCustomTheme": "Delete theme",
+    "jsHint": "Available variables: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "navigationControls": "Navigation Controls",
     "notSaved": "لم يُحفظ",
-    "openCSSFile": "افتح ملف CSS",
-    "openJSFile": "فتح ملف JS",
-    "preset": "اعدادات جاهزة",
-    "readerTheme": "سمة القارئ",
-    "saveCustomTheme": "حفظ السمة المخصصة",
+    "openCSSFile": "Import CSS file",
+    "openJSFile": "Import JS file",
+    "preset": "الإعداد المسبق",
+    "readingMode": "Reading Mode",
+    "readerTheme": "Theme",
+    "saveCustomTheme": "Save theme",
     "textColor": "لون النص",
-    "textColorModal": "لون نص القراءة",
+    "textColorModal": "Text color",
     "title": "القارئ",
-    "verticalSeekbarDesc": "التبديل بين شريط البحث العمودي والأفقي"
+    "verticalSeekbarDesc": "Use vertical seekbar"
   },
   "sourceScreen": {
     "noResultsFound": "لم يتم العثور على أي نتائج"
@@ -499,6 +541,17 @@
     "pickATheme": "Pick a theme",
     "light": "Light",
     "dark": "Dark",
+    "system": "System",
     "complete": "Complete"
+  },
+  "notifications": {
+    "IMPORT_EPUB": "Imported epub",
+    "UPDATE_LIBRARY": "Updated library",
+    "DRIVE_BACKUP": "Drive backup",
+    "DRIVE_RESTORE": "Drive restore",
+    "SELF_HOST_BACKUP": "Self host backup",
+    "SELF_HOST_RESTORE": "Self host restore",
+    "MIGRATE_NOVEL": "Migrated novel",
+    "DOWNLOAD_CHAPTER": "Downloaded chapter"
   }
 }
