--- a/strings/languages/de_DE/strings.json
+++ b/strings/languages/de_DE/strings.json
@@ -6,33 +6,43 @@
     "helpTranslate": "Hilf beim Übersetzen",
     "sources": "Quellen",
     "version": "Version",
-    "whatsNew": "What's new"
+    "whatsNew": "Was neu ist"
   },
-  "advancedSettings": "Advanced",
+  "advancedSettings": "Erweitert",
   "advancedSettingsScreen": {
     "cachedNovelsDeletedToast": "Cached novels deleted",
     "chapterInsertFailed": "chapter insert failed",
     "clearCachedNovels": "Clear cached novels",
     "clearCachedNovelsDesc": "Delete cached novels which not in your library",
-    "clearDatabaseWarning": "Are you sure? Read and Downloaded chapters and progress of non-library novels will be lost.",
-    "clearUpdatesMessage": "Updates cleared.",
+    "clearDatabaseWarning": "Read and Downloaded chapters and progress of non-library novels will be lost.",
+    "clearUpdatesMessage": "Aktualisierungen geleert.",
     "clearUpdatesTab": "Clear updates tab",
-    "clearUpdatesWarning": "Are you sure? Updates tab will be cleared.",
+    "clearUpdatesWarning": "Updates tab will be cleared.",
     "clearupdatesTabDesc": "Clears chapter entries in updates tab",
     "dataManagement": "Data Management",
     "deleteReadChapters": "Gelesene Kapitel löschen",
-    "deleteReadChaptersDialogTitle": "Sind Sie sicher? Alle als gelesen markierten Kapitel werden gelöscht.",
+    "deleteReadChaptersDialogTitle": "All chapters marked as read will be deleted.",
     "importEpub": "Import Epub",
     "importNovel": "Import Novel",
     "importStaticFiles": "Import Static Files",
     "novelInsertFailed": "novel insert failed",
     "useFAB": "Use FAB instead of button",
-    "userAgent": "User Agent"
+    "userAgent": "User Agent",
+    "recreateDBIndexes": "Recreate DB indexes",
+    "recreateDBIndexesToast": "Recreated DB indexes",
+    "recreateDBIndexesDialogTitle": "All DB indexes will be recreated.\nThis may take a while.",
+    "recreateDBIndexesDesc": "Recreates DB indexes. This may improve performance on slower devices."
   },
   "appearance": "Appearance",
   "appearanceScreen": {
     "accentColor": "Accent Color",
     "alwaysShowNavLabels": "Always show nav labels",
+    "appLanguage": "App language",
+    "languagePickerModal": {
+      "title": "Select Language",
+      "restartNote": "You will need to restart the app for the language change to take full effect."
+    },
+    "appLanguageDefault": "Default",
     "appTheme": "App theme",
     "darkTheme": "Dark Theme",
     "hideBackdrop": "Hide backdrop",
@@ -42,6 +52,10 @@
     "pureBlackDarkMode": "Pure black dark mode",
     "showHistoryInTheNav": "Show history in the nav",
     "showUpdatesInTheNav": "Show updates in the nav",
+    "themeMode": "Theme mode",
+    "themeModeLight": "Light",
+    "themeModeDark": "Dark",
+    "themeModeSystem": "System",
     "theme": {
       "default": "Default",
       "lavender": "Lavender",
@@ -51,16 +65,27 @@
       "tako": "Tako",
       "teal": "Teal",
       "turquoise": "Türkis",
-      "yotsuba": "Yotsuba"
+      "yotsuba": "Yotsuba",
+      "catppuccin": "Catppuccin",
+      "yinyang": "Yin & Yang"
     }
   },
   "backupScreen": {
     "backupName": "Backup name",
+    "backupCreated": "Backup created successfully",
+    "backupRestored": "Backup restored successfully",
+    "categoriesRestored": "Restored %{count} categories",
     "createBackup": "Create backup",
     "createBackupDesc": "Can be used to restore current library",
     "createBackupWarning": "Create backup may not work on devices with Android 9 or lower.",
     "downloadingData": "Downloading Data",
     "downloadingDownloadedFiles": "Downloading Downloaded files",
+    "failed": "Backup failed",
+    "novelsRestored": "Restored %{count} novels",
+    "restoringCategories": "Restoring categories...",
+    "restoringNovels": "Restoring novels...",
+    "restoringSettings": "Restoring settings...",
+    "settingsRestored": "Settings restored",
     "drive": {
       "backup": "Drive Backup",
       "backupInterruped": "Drive Backup Interruped",
@@ -71,13 +96,7 @@
     "googeDrive": "Googe Drive",
     "googeDriveDesc": "Backup to your Google Drive",
     "invalidBackupFolder": "Invalid backup folder",
-    "legacy": {
-      "backupCreated": "Backup created %{fileName}",
-      "libraryRestored": "Library Restored",
-      "noAvailableBackup": "There's no available backup",
-      "novelsRestored": "%{num} novels restored"
-    },
-    "legacyBackup": "Legacy Backup",
+    "localBackup": "Local Backup",
     "noBackupFound": "No backup found",
     "preparingData": "Preparing Data",
     "remote": {
@@ -100,6 +119,7 @@
   "browseScreen": {
     "addedToLibrary": "Zur Bibliothek hinzugefügt",
     "available": "Available",
+    "deletePluginMessage": "Are you sure you want to uninstall %{name}?",
     "discover": "Entdecke",
     "globalSearch": "Globale Suche",
     "installFailed": "Installation failed: %{name}",
@@ -116,10 +136,14 @@
       "selectSourceDesc": "Select a Source To Migrate From"
     },
     "noSource": "Your library does not have any novels from this source",
+    "pinnedPlugin": "Pinned %{name}",
+    "pinnedPlugins": "Pinned plugins",
     "removeFromLibrary": "Aus der Bibliothek entfernt",
     "searchbar": "Quellen durchsuchen",
+    "searchResults": "Search results",
     "selectNovel": "Select Novel",
     "uninstalledPlugin": "Uninstalled %{name}",
+    "unpinnedPlugin": "Unpinned %{name}",
     "updateFailed": "Update failed",
     "updatedTo": "Updated to %{version}",
     "settings": {
@@ -194,7 +218,9 @@
     "signIn": "Sign in",
     "signOut": "Sign out",
     "sort": "Sortieren",
-    "submit": "Bestätigen"
+    "submit": "Bestätigen",
+    "loading": "Loading ...",
+    "warning": "Warning"
   },
   "webview": {
     "refresh": "Refresh",
@@ -343,15 +369,28 @@
     "chapterChapnum": "Chapter %{num}",
     "chapters": "Kapitel",
     "continueReading": "Weiterlesen",
-    "convertToEpubModal": {
-      "chaptersWarning": "Nur heruntergeladene Kapitel sind im EPUB enthalten",
-      "chooseLocation": "EPUB-Speicherverzeichnis auswählen",
-      "pathToFolder": "Pfad zum EPUB-Speicherverzeichnis",
-      "useCustomCSS": "Eigene CSS-Datei verwenden",
-      "useCustomJS": "Eigene JS-Datei verwenden",
-      "useCustomJSWarning": "Wird möglicherweise nicht von allen EPUB-Readern unterstützt",
-      "useReaderTheme": "Use reader theme"
+    "exportEpubModal": {
+      "applyReaderTheme": "Apply reader theme to EPUB",
+      "customJSWarning": "Custom JS may not be supported by all EPUB readers",
+      "downloadedChaptersOnly": "Only downloaded chapters will be included in the EPUB file",
+      "endChapter": "End Chapter",
+      "exportAll": "Export All Chapters",
+      "includeCustomCSS": "Include Custom CSS",
+      "includeCustomJS": "Include Custom JS",
+      "invalidRange": "Please enter valid chapter numbers",
+      "selectFolder": "Select destination folder for EPUB file",
+      "startChapter": "Start Chapter",
+      "startGreaterThanEnd": "Start chapter must be less than or equal to end chapter",
+      "title": "Export Novel as EPUB"
     },
+    "epub": {
+      "exportFailed": "Failed to export EPUB: %{error}",
+      "exportSuccess": "Successfully exported %{chapters} chapters as EPUB",
+      "noDownloadedChapters": "No downloaded chapters found. Please download chapters before exporting.",
+      "noNovelSelected": "No novel selected for export"
+    },
+    "coverSaved": "Cover saved",
+    "coverNotSaved": "Cover not saved",
     "deleteChapterError": "Cant delete chapter chapter folder",
     "deleteMessage": "Delete downloaded chapters?",
     "deletedAllDownloads": "Deleted all Downloads",
@@ -386,6 +425,7 @@
     },
     "migrate": "Migrieren",
     "noSummary": "Keine Beschreibung",
+    "noCoverFound": "No cover found",
     "progress": "Progress %{progress} %",
     "readChaptersDeleted": "Read chapters deleted",
     "startReadingChapters": "Start reading %{name}",
@@ -405,27 +445,27 @@
   },
   "readerScreen": {
     "bottomSheet": {
-      "allowTextSelection": "Textauswahl erlauben",
-      "autoscroll": "AutoScroll",
-      "bionicReading": "Bionisches Lesen",
+      "allowTextSelection": "Text selection",
+      "autoscroll": "Auto-scroll",
+      "bionicReading": "Bionic reading",
       "tapToScroll": "Tap to scroll",
       "color": "Farbe",
       "fontStyle": "Schriftart",
       "fullscreen": "Vollbildmodus",
-      "lineHeight": "Zeilenhöhe",
+      "lineHeight": "Line height",
       "padding": "Padding",
-      "pageReader": "Tippe links oder rechts um durch die Seiten im Leser zu navigieren (Experimentell)",
-      "removeExtraSpacing": "Extra Absatzabstand entfernen",
+      "pageReader": "Paged reading (Experimental)",
+      "removeExtraSpacing": "Remove extra spacing",
       "scrollAmount": "Höhe des Bildlaufs (standardmäßig Bildschirmhöhe)",
-      "showBatteryAndTime": "Akku und Zeit anzeigen",
-      "showProgressPercentage": "Zeige Fortschritt in Prozent",
-      "swipeGestures": "Nach links oder rechts wischen, um zwischen den Kapiteln zu wechseln",
-      "textAlign": "Textausrichtung",
+      "showBatteryAndTime": "Battery & time",
+      "showProgressPercentage": "Reading progress",
+      "swipeGestures": "Swipe between chapters",
+      "textAlign": "Text alignment",
       "textSize": "Schriftgröße",
-      "useChapterDrawerSwipeNavigation": "Wische nach rechts, um die Seitenleiste zu öffnen",
-      "verticalSeekbar": "Vertikale Suchleiste",
+      "useChapterDrawerSwipeNavigation": "Swipe to open drawer",
+      "verticalSeekbar": "Vertical seekbar",
       "keepScreenOn": "Keep screen on",
-      "volumeButtonsScroll": "Scrollen mit Lautstärkeregler"
+      "volumeButtonsScroll": "Volume button scrolling"
     },
     "drawer": {
       "scrollToBottom": "Zum Ende springen",
@@ -439,27 +479,29 @@
     "noPreviousChapter": "There's no previous chapter"
   },
   "readerSettings": {
-    "autoScrollInterval": "AutoScroll Intervall (in Sekunden)",
-    "autoScrollOffset": "AutoScroll Versatz (standardmäßig Bildschirmhöhe)",
+    "autoScrollInterval": "Scroll interval (seconds)",
+    "autoScrollOffset": "Scroll offset (screen heights)",
     "backgroundColor": "Hintergrundfarbe",
-    "backgroundColorModal": "Reader Hintergrundfarbe",
-    "clearCustomCSS": "Sind Sie sicher? Ihr benutzerdefiniertes CSS wird zurückgesetzt.",
-    "clearCustomJS": "Sind Sie sicher? Ihr benutzerdefiniertes JS wird zurückgesetzt.",
-    "cssHint": "Hinweis: Sie können eine quellspezifische CSS-Konfiguration mit der Quell-ID erstellen. (#sourceId-[SOURCEID])",
+    "backgroundColorModal": "Background color",
+    "clearCustomCSS": "Reset your custom CSS?",
+    "clearCustomJS": "Reset your custom JS?",
+    "cssHint": "Target specific sources using #sourceId-[SOURCEID] in your selectors",
     "customCSS": "Benutzerdefiniertes CSS",
     "customJS": "Benutzerdefiniertes CSS",
-    "deleteCustomTheme": "Benutzerdefiniertes Theme löschen",
-    "jsHint": "Hinweis: Sie haben Zugriff auf folgende Variablen: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "deleteCustomTheme": "Delete theme",
+    "jsHint": "Available variables: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "navigationControls": "Navigation Controls",
     "notSaved": "Nicht gespeichert",
-    "openCSSFile": "CSS-Datei öffnen",
-    "openJSFile": "JS-Datei öffnen",
+    "openCSSFile": "Import CSS file",
+    "openJSFile": "Import JS file",
     "preset": "Vorlage",
-    "readerTheme": "Reader Theme",
-    "saveCustomTheme": "Benutzerdefiniertes Theme speichern",
+    "readingMode": "Reading Mode",
+    "readerTheme": "Theme",
+    "saveCustomTheme": "Save theme",
     "textColor": "Textfarbe",
-    "textColorModal": "Reader Textfarbe",
+    "textColorModal": "Text color",
     "title": "Reader",
-    "verticalSeekbarDesc": "Zwischen vertikaler und horizontaler Suchleiste wechseln"
+    "verticalSeekbarDesc": "Use vertical seekbar"
   },
   "sourceScreen": {
     "noResultsFound": "Keine Ergebnisse gefunden"
@@ -499,6 +541,17 @@
     "pickATheme": "Pick a theme",
     "light": "Light",
     "dark": "Dark",
+    "system": "System",
     "complete": "Complete"
+  },
+  "notifications": {
+    "IMPORT_EPUB": "Imported epub",
+    "UPDATE_LIBRARY": "Updated library",
+    "DRIVE_BACKUP": "Drive backup",
+    "DRIVE_RESTORE": "Drive restore",
+    "SELF_HOST_BACKUP": "Self host backup",
+    "SELF_HOST_RESTORE": "Self host restore",
+    "MIGRATE_NOVEL": "Migrated novel",
+    "DOWNLOAD_CHAPTER": "Downloaded chapter"
   }
 }
