--- a/strings/languages/it_IT/strings.json
+++ b/strings/languages/it_IT/strings.json
@@ -1,38 +1,48 @@
 {
   "aboutScreen": {
-    "website": "Website",
+    "website": "Sito Web",
     "discord": "Discord",
-    "github": "Github",
-    "helpTranslate": "Help translate",
-    "sources": "Sources",
-    "version": "Version",
-    "whatsNew": "What's new"
+    "github": "GitHub",
+    "helpTranslate": "Aiutaci a Tradurre",
+    "sources": "Fonti",
+    "version": "Versione",
+    "whatsNew": "Novità"
   },
-  "advancedSettings": "Advanced",
+  "advancedSettings": "Avanzate",
   "advancedSettingsScreen": {
-    "cachedNovelsDeletedToast": "Cached novels deleted",
-    "chapterInsertFailed": "chapter insert failed",
-    "clearCachedNovels": "Clear cached novels",
-    "clearCachedNovelsDesc": "Delete cached novels which not in your library",
-    "clearDatabaseWarning": "Are you sure? Read and Downloaded chapters and progress of non-library novels will be lost.",
-    "clearUpdatesMessage": "Updates cleared.",
-    "clearUpdatesTab": "Clear updates tab",
-    "clearUpdatesWarning": "Are you sure? Updates tab will be cleared.",
+    "cachedNovelsDeletedToast": "Romanzi in cache eliminati",
+    "chapterInsertFailed": "Inserimento capitolo non riuscito",
+    "clearCachedNovels": "Pulisci i romanzi in cache",
+    "clearCachedNovelsDesc": "Elimina i romanzi in cache che non sono nella tua libreria",
+    "clearDatabaseWarning": "Progressi dei romanzi non presenti in libreria, assieme ai capitoli Letti e Scaricati saranno persi.",
+    "clearUpdatesMessage": "Aggiornamenti cancellati.",
+    "clearUpdatesTab": "Pulisci scheda aggiornamenti",
+    "clearUpdatesWarning": "La scheda Aggiornamenti verrà cancellata.",
     "clearupdatesTabDesc": "Clears chapter entries in updates tab",
     "dataManagement": "Data Management",
     "deleteReadChapters": "Elimina capitoli letti",
-    "deleteReadChaptersDialogTitle": "Sei sicuro? Tutti i capitoli segnati come letti verranno eliminati.",
+    "deleteReadChaptersDialogTitle": "All chapters marked as read will be deleted.",
     "importEpub": "Import Epub",
     "importNovel": "Import Novel",
     "importStaticFiles": "Import Static Files",
     "novelInsertFailed": "novel insert failed",
     "useFAB": "Use FAB instead of button",
-    "userAgent": "User Agent"
+    "userAgent": "User Agent",
+    "recreateDBIndexes": "Recreate DB indexes",
+    "recreateDBIndexesToast": "Recreated DB indexes",
+    "recreateDBIndexesDialogTitle": "All DB indexes will be recreated.\nThis may take a while.",
+    "recreateDBIndexesDesc": "Recreates DB indexes. This may improve performance on slower devices."
   },
   "appearance": "Appearance",
   "appearanceScreen": {
     "accentColor": "Accent Color",
     "alwaysShowNavLabels": "Always show nav labels",
+    "appLanguage": "App language",
+    "languagePickerModal": {
+      "title": "Select Language",
+      "restartNote": "You will need to restart the app for the language change to take full effect."
+    },
+    "appLanguageDefault": "Default",
     "appTheme": "App theme",
     "darkTheme": "Dark Theme",
     "hideBackdrop": "Hide backdrop",
@@ -42,6 +52,10 @@
     "pureBlackDarkMode": "Pure black dark mode",
     "showHistoryInTheNav": "Show history in the nav",
     "showUpdatesInTheNav": "Show updates in the nav",
+    "themeMode": "Theme mode",
+    "themeModeLight": "Light",
+    "themeModeDark": "Dark",
+    "themeModeSystem": "System",
     "theme": {
       "default": "Default",
       "lavender": "Lavender",
@@ -51,16 +65,27 @@
       "tako": "Tako",
       "teal": "Teal",
       "turquoise": "Turquoise",
-      "yotsuba": "Yotsuba"
+      "yotsuba": "Yotsuba",
+      "catppuccin": "Catppuccin",
+      "yinyang": "Yin & Yang"
     }
   },
   "backupScreen": {
     "backupName": "Backup name",
+    "backupCreated": "Backup created successfully",
+    "backupRestored": "Backup restored successfully",
+    "categoriesRestored": "Restored %{count} categories",
     "createBackup": "Create backup",
     "createBackupDesc": "Can be used to restore current library",
     "createBackupWarning": "Create backup may not work on devices with Android 9 or lower.",
     "downloadingData": "Downloading Data",
     "downloadingDownloadedFiles": "Downloading Downloaded files",
+    "failed": "Backup failed",
+    "novelsRestored": "Restored %{count} novels",
+    "restoringCategories": "Restoring categories...",
+    "restoringNovels": "Restoring novels...",
+    "restoringSettings": "Restoring settings...",
+    "settingsRestored": "Settings restored",
     "drive": {
       "backup": "Drive Backup",
       "backupInterruped": "Drive Backup Interruped",
@@ -71,13 +96,7 @@
     "googeDrive": "Googe Drive",
     "googeDriveDesc": "Backup to your Google Drive",
     "invalidBackupFolder": "Invalid backup folder",
-    "legacy": {
-      "backupCreated": "Backup created %{fileName}",
-      "libraryRestored": "Library Restored",
-      "noAvailableBackup": "There's no available backup",
-      "novelsRestored": "%{num} novels restored"
-    },
-    "legacyBackup": "Legacy Backup",
+    "localBackup": "Local Backup",
     "noBackupFound": "No backup found",
     "preparingData": "Preparing Data",
     "remote": {
@@ -100,6 +119,7 @@
   "browseScreen": {
     "addedToLibrary": "Aggiunto alla libreria",
     "available": "Available",
+    "deletePluginMessage": "Are you sure you want to uninstall %{name}?",
     "discover": "Scopri",
     "globalSearch": "Ricerca globale",
     "installFailed": "Installation failed: %{name}",
@@ -116,10 +136,14 @@
       "selectSourceDesc": "Select a Source To Migrate From"
     },
     "noSource": "Your library does not have any novels from this source",
+    "pinnedPlugin": "Pinned %{name}",
+    "pinnedPlugins": "Pinned plugins",
     "removeFromLibrary": "Rimosso dalla libreria",
     "searchbar": "Cerca fonti",
+    "searchResults": "Search results",
     "selectNovel": "Select Novel",
     "uninstalledPlugin": "Uninstalled %{name}",
+    "unpinnedPlugin": "Unpinned %{name}",
     "updateFailed": "Update failed",
     "updatedTo": "Updated to %{version}",
     "settings": {
@@ -194,7 +218,9 @@
     "signIn": "Sign in",
     "signOut": "Sign out",
     "sort": "Ordina",
-    "submit": "Invia"
+    "submit": "Invia",
+    "loading": "Loading ...",
+    "warning": "Warning"
   },
   "webview": {
     "refresh": "Refresh",
@@ -343,15 +369,28 @@
     "chapterChapnum": "Chapter %{num}",
     "chapters": "Capitoli",
     "continueReading": "Continua a leggere",
-    "convertToEpubModal": {
-      "chaptersWarning": "Solo i capitoli scaricati sono inclusi nell'EPUB",
-      "chooseLocation": "Seleziona la cartella di archiviazione EPUB",
-      "pathToFolder": "Percorso cartella di salvataggio EPUB",
-      "useCustomCSS": "Usa CSS personalizzato",
-      "useCustomJS": "Usa JS personalizzato",
-      "useCustomJSWarning": "Potrebbe non essere supportato da tutti i lettori EPUB",
-      "useReaderTheme": "Usa tema lettore"
+    "exportEpubModal": {
+      "applyReaderTheme": "Apply reader theme to EPUB",
+      "customJSWarning": "Custom JS may not be supported by all EPUB readers",
+      "downloadedChaptersOnly": "Only downloaded chapters will be included in the EPUB file",
+      "endChapter": "End Chapter",
+      "exportAll": "Export All Chapters",
+      "includeCustomCSS": "Include Custom CSS",
+      "includeCustomJS": "Include Custom JS",
+      "invalidRange": "Please enter valid chapter numbers",
+      "selectFolder": "Select destination folder for EPUB file",
+      "startChapter": "Start Chapter",
+      "startGreaterThanEnd": "Start chapter must be less than or equal to end chapter",
+      "title": "Export Novel as EPUB"
     },
+    "epub": {
+      "exportFailed": "Failed to export EPUB: %{error}",
+      "exportSuccess": "Successfully exported %{chapters} chapters as EPUB",
+      "noDownloadedChapters": "No downloaded chapters found. Please download chapters before exporting.",
+      "noNovelSelected": "No novel selected for export"
+    },
+    "coverSaved": "Cover saved",
+    "coverNotSaved": "Cover not saved",
     "deleteChapterError": "Cant delete chapter chapter folder",
     "deleteMessage": "Delete downloaded chapters?",
     "deletedAllDownloads": "Deleted all Downloads",
@@ -386,6 +425,7 @@
     },
     "migrate": "Migra",
     "noSummary": "Nessuna trama",
+    "noCoverFound": "No cover found",
     "progress": "Progress %{progress} %",
     "readChaptersDeleted": "Read chapters deleted",
     "startReadingChapters": "Start reading %{name}",
@@ -405,27 +445,27 @@
   },
   "readerScreen": {
     "bottomSheet": {
-      "allowTextSelection": "Consenti selezione",
-      "autoscroll": "Scorrimento automatico",
-      "bionicReading": "Lettura Bionica",
+      "allowTextSelection": "Text selection",
+      "autoscroll": "Auto-scroll",
+      "bionicReading": "Bionic reading",
       "tapToScroll": "Tap to scroll",
       "color": "Colore",
       "fontStyle": "Stile del font",
       "fullscreen": "Schermo Intero",
-      "lineHeight": "Altezza riga",
+      "lineHeight": "Line height",
       "padding": "Padding",
-      "pageReader": "Tocca a sinistra o a destra per navigare tra le pagine del lettore (sperimentale)",
-      "removeExtraSpacing": "Rimuovi spaziatura extra",
+      "pageReader": "Paged reading (Experimental)",
+      "removeExtraSpacing": "Remove extra spacing",
       "scrollAmount": "Quantità di scorrimento (altezza schermo di default)",
-      "showBatteryAndTime": "Mostra batteria e orario",
-      "showProgressPercentage": "Mostra percentuale di progresso",
-      "swipeGestures": "Scorri verso sinistra o destra per navigare tra i capitoli",
-      "textAlign": "Allineamento del testo",
+      "showBatteryAndTime": "Battery & time",
+      "showProgressPercentage": "Reading progress",
+      "swipeGestures": "Swipe between chapters",
+      "textAlign": "Text alignment",
       "textSize": "Dimensione del testo",
-      "useChapterDrawerSwipeNavigation": "Scorri a destra per aprire",
-      "verticalSeekbar": "Barra Verticale",
+      "useChapterDrawerSwipeNavigation": "Swipe to open drawer",
+      "verticalSeekbar": "Vertical seekbar",
       "keepScreenOn": "Keep screen on",
-      "volumeButtonsScroll": "Utilizzare il pulsante del volume per scorrere"
+      "volumeButtonsScroll": "Volume button scrolling"
     },
     "drawer": {
       "scrollToBottom": "Scorri in fondo",
@@ -439,27 +479,29 @@
     "noPreviousChapter": "There's no previous chapter"
   },
   "readerSettings": {
-    "autoScrollInterval": "Intervallo di scorrimento automatico (in secondi)",
-    "autoScrollOffset": "Quantità di scorrimento (altezza schermo di default)",
+    "autoScrollInterval": "Scroll interval (seconds)",
+    "autoScrollOffset": "Scroll offset (screen heights)",
     "backgroundColor": "Colore dello sfondo",
-    "backgroundColorModal": "Colore sfondo del lettore",
-    "clearCustomCSS": "Sei sicuro? Il CSS personalizzato verrebbe resettato.",
-    "clearCustomJS": "Sei sicuro? Il tuo JS personalizzato verrebbe resettato.",
-    "cssHint": "Consiglio: è possibile creare una configurazione CSS specifica con l'ID sorgente. (#sourceId-[SOURCEID])",
+    "backgroundColorModal": "Background color",
+    "clearCustomCSS": "Reset your custom CSS?",
+    "clearCustomJS": "Reset your custom JS?",
+    "cssHint": "Target specific sources using #sourceId-[SOURCEID] in your selectors",
     "customCSS": "CSS personalizzato",
     "customJS": "JS personalizzato",
-    "deleteCustomTheme": "Elimina tema personalizzato",
-    "jsHint": "Consiglio: Hai accesso alle variabili seguenti: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "deleteCustomTheme": "Delete theme",
+    "jsHint": "Available variables: html, novelName, chapterName, sourceId, chapterId, novelId",
+    "navigationControls": "Navigation Controls",
     "notSaved": "Non salvato",
-    "openCSSFile": "Apri file CSS",
-    "openJSFile": "Apri file JS",
+    "openCSSFile": "Import CSS file",
+    "openJSFile": "Import JS file",
     "preset": "Predefinito",
-    "readerTheme": "Tema del lettore",
-    "saveCustomTheme": "Salva tema personalizzato",
+    "readingMode": "Reading Mode",
+    "readerTheme": "Theme",
+    "saveCustomTheme": "Save theme",
     "textColor": "Colore del testo",
-    "textColorModal": "Colore testo del lettore",
+    "textColorModal": "Text color",
     "title": "Lettore",
-    "verticalSeekbarDesc": "Passa dalla barra verticale a quella orizzontale"
+    "verticalSeekbarDesc": "Use vertical seekbar"
   },
   "sourceScreen": {
     "noResultsFound": "Nessun risultato trovato"
@@ -499,6 +541,17 @@
     "pickATheme": "Pick a theme",
     "light": "Light",
     "dark": "Dark",
+    "system": "System",
     "complete": "Complete"
+  },
+  "notifications": {
+    "IMPORT_EPUB": "Imported epub",
+    "UPDATE_LIBRARY": "Updated library",
+    "DRIVE_BACKUP": "Drive backup",
+    "DRIVE_RESTORE": "Drive restore",
+    "SELF_HOST_BACKUP": "Self host backup",
+    "SELF_HOST_RESTORE": "Self host restore",
+    "MIGRATE_NOVEL": "Migrated novel",
+    "DOWNLOAD_CHAPTER": "Downloaded chapter"
   }
 }
